--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# 2018年4月4日 22:17
+# Apr 6, 2018 at 21:13
 
 [Rule]
 # Custom
@@ -620,7 +620,6 @@ DOMAIN-SUFFIX,drmcmm.baidu.com,REJECT
 DOMAIN-SUFFIX,dup.baidustatic.com,REJECT
 DOMAIN-SUFFIX,dxp.baidu.com,REJECT
 DOMAIN-SUFFIX,dzl.baidu.com,REJECT
-DOMAIN-SUFFIX,e.baidu.com,REJECT
 DOMAIN-SUFFIX,eclick.baidu.com,REJECT
 DOMAIN-SUFFIX,eiv.baidu.com,REJECT
 DOMAIN-SUFFIX,entry.baidu.com,REJECT
@@ -667,7 +666,6 @@ DOMAIN-SUFFIX,rigel.baidustatic.com,REJECT
 DOMAIN-SUFFIX,river.zhidao.baidu.com,REJECT
 DOMAIN-SUFFIX,rj.baidu.com,REJECT
 DOMAIN-SUFFIX,rplog.baidu.com,REJECT
-DOMAIN-SUFFIX,s.baidu.com,REJECT
 DOMAIN-SUFFIX,s.cpro.baidu.com,REJECT
 DOMAIN-SUFFIX,sa.tuisong.baidu.com,REJECT
 DOMAIN-SUFFIX,sclick.baidu.com,REJECT
@@ -5336,6 +5334,7 @@ IP-CIDR,78.140.131.214/32,REJECT,no-resolve
 
 
 
+
 # PROXY
 
 // Client
@@ -5352,13 +5351,13 @@ PROCESS-NAME,Twitterrific,PROXY
 // UA
 USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,PROXY
 USER-AGENT,*Telegram*,PROXY
+USER-AGENT,*YouTube*,PROXY
 USER-AGENT,Argo*,Netflix & TVB
 USER-AGENT,Coinbase*,PROXY
 USER-AGENT,Instagram*,PROXY
 USER-AGENT,SoundCloud*,PROXY
 USER-AGENT,Speedtest*,PROXY
 USER-AGENT,WhatsApp*,PROXY
-USER-AGENT,YouTube*,PROXY
 
 // BBC
 USER-AGENT,BBCiPlayer*,PROXY
@@ -5366,8 +5365,9 @@ DOMAIN-KEYWORD,uk-live,PROXY
 DOMAIN-SUFFIX,bbc.co,PROXY
 DOMAIN-SUFFIX,bbc.com,PROXY
 
-// Japan
+// jp / tw
 URL-REGEX,*\.jp,PROXY
+URL-REGEX,*\.tw,PROXY
 
 // Line
 DOMAIN-SUFFIX,lin.ee,PROXY
@@ -5955,12 +5955,10 @@ DOMAIN-KEYWORD,beetalk,PROXY,force-remote-dns
 DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
 DOMAIN-KEYWORD,dropbox,PROXY,force-remote-dns
 DOMAIN-KEYWORD,facebook,PROXY,force-remote-dns
-DOMAIN-KEYWORD,google,PROXY,force-remote-dns
 DOMAIN-KEYWORD,spotify,Spotify,force-remote-dns
 DOMAIN-KEYWORD,telegram,PROXY,force-remote-dns
 DOMAIN-KEYWORD,twitter,PROXY,force-remote-dns
 DOMAIN-KEYWORD,whatsapp,PROXY,force-remote-dns
-DOMAIN-KEYWORD,youtube,PROXY,force-remote-dns
 DOMAIN-SUFFIX,1e100.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,2mdn.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,abc.xyz,PROXY,force-remote-dns
@@ -5981,6 +5979,8 @@ DOMAIN-SUFFIX,fbcdn.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,fbsbx.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gcr.io,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gmail.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,google.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,googlevideo.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gosetsuden.jp,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gvt1.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gwtproject.org,PROXY,force-remote-dns
@@ -6014,6 +6014,7 @@ DOMAIN-SUFFIX,webmproject.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,webrtc.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,whatsapp.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,whatsapp.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,youtube.com,PROXY,force-remote-dns
 
 // LINE
 IP-CIDR,103.2.28.0/22,PROXY,no-resolve
@@ -6374,7 +6375,8 @@ FINAL,Others
 
 
 [UDP Rule]
-DOMAIN-SUFFIX,epicgames.com,PROXY,force-remote-dns
+DOMAIN-KEYWORD,epicgames,PROXY,force-remote-dns
+DOMAIN-SUFFIX,helpshift.com,PROXY,force-remote-dns
 
 GEOIP,CN,Domestic
 FINAL,Others
@@ -6933,7 +6935,7 @@ www.gmail.com = 216.58.203.184
 ^https?://m.+.china.com.cn/statics/sdmobile/js/mobile.advert.js - reject
 ^https?://m.+.china.com.cn/statics/sdmobile/js/mobileshare.js - reject
 ^https?://m.elecfans.com/static/js/ad.js - reject
-^https?://mi.gdt.qq.com\/gdt_mview.fcg\?posid= - reject 
+^https?://mi.gdt.qq.com\/gdt_mview.fcg\?posid= - reject
 ^https?://nga\.cn.+\bhome.+\b=ad - reject
 ^https?://player.hoge.cn/advertisement.swf - reject
 ^https?://ress.dxpmedia.com/appicast/ - reject
