--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Apr 7, 2018 at 15:19
+# Apr 7, 2018 at 23:35
 
 [Rule]
 # Custom
@@ -671,7 +671,6 @@ DOMAIN-SUFFIX,share.baidu.com,REJECT
 DOMAIN-SUFFIX,snippet.pos.baidu.com,REJECT
 DOMAIN-SUFFIX,sobar.baidu.com,REJECT
 DOMAIN-SUFFIX,sobartop.baidu.com,REJECT
-DOMAIN-SUFFIX,sp0.baidu.com,REJECT
 DOMAIN-SUFFIX,spcode.baidu.com,REJECT
 DOMAIN-SUFFIX,stat.v.baidu.com,REJECT
 DOMAIN-SUFFIX,t10.baidu.com,REJECT
@@ -2673,6 +2672,7 @@ DOMAIN-SUFFIX,cti.w55c.net,REJECT
 DOMAIN-SUFFIX,ctsywy.com,REJECT
 DOMAIN-SUFFIX,cupid.jebe.renren.com,REJECT
 DOMAIN-SUFFIX,customer-security.online,REJECT
+DOMAIN-SUFFIX,cwpush.com,REJECT
 DOMAIN-SUFFIX,cws-cctv.conviva.com,REJECT
 DOMAIN-SUFFIX,cy123.cc,REJECT
 DOMAIN-SUFFIX,cyacc.com,REJECT
@@ -4582,6 +4582,7 @@ DOMAIN-SUFFIX,sytz1288.com,REJECT
 DOMAIN-SUFFIX,szdzbx.com,REJECT
 DOMAIN-SUFFIX,szfaq.com,REJECT
 DOMAIN-SUFFIX,szggdw.com,REJECT
+DOMAIN-SUFFIX,szkdst.com,REJECT
 DOMAIN-SUFFIX,szrk3.com,REJECT
 DOMAIN-SUFFIX,szxpsg.com,REJECT
 DOMAIN-SUFFIX,t.appsflyer.com,REJECT
@@ -5394,6 +5395,8 @@ DOMAIN-SUFFIX,nflximg.net,Netflix & TVB
 DOMAIN-SUFFIX,nflxvideo.net,Netflix & TVB
 
 // Steam
+DOMAIN-SUFFIX,fanatical, PROXY
+DOMAIN-SUFFIX,humblebundle.com,PROXY
 DOMAIN-SUFFIX,steamcommunity.com,PROXY
 DOMAIN-SUFFIX,steamstatic.com,PROXY
 
@@ -5826,6 +5829,7 @@ DOMAIN-SUFFIX,trendsmap.com,PROXY
 DOMAIN-SUFFIX,trulyergonomic.com,PROXY
 DOMAIN-SUFFIX,trustasiassl.com,PROXY
 DOMAIN-SUFFIX,tt-rss.org,PROXY
+DOMAIN-SUFFIX,ttvnw.net,PROXY
 DOMAIN-SUFFIX,tumblr.co,PROXY
 DOMAIN-SUFFIX,tumblr.com,PROXY
 DOMAIN-SUFFIX,turbobit.net,PROXY
@@ -6312,6 +6316,7 @@ DOMAIN-SUFFIX,v2ex.co,Domestic
 DOMAIN-SUFFIX,v2ex.com,Domestic
 DOMAIN-SUFFIX,vultr.com,Domestic
 DOMAIN-SUFFIX,wandoujia.com,Domestic
+DOMAIN-SUFFIX,weather.bjango.com,Domestic
 DOMAIN-SUFFIX,weather.com,Domestic
 DOMAIN-SUFFIX,weibo.cn,Domestic
 DOMAIN-SUFFIX,weibo.com,Domestic
