--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Apr 7, 2018 at 23:35
+# Apr 9, 2018 at 00:16
 
 [Rule]
 # Custom
@@ -1133,7 +1133,6 @@ DOMAIN-SUFFIX,mcgi.v.qq.com,REJECT
 DOMAIN-SUFFIX,mdevstat.qqlive.qq.com,REJECT
 DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,mini2015.qq.com,REJECT
-DOMAIN-SUFFIX,mobile.qzone.qq.com,REJECT
 DOMAIN-SUFFIX,monitor.uu.qq.com,REJECT
 DOMAIN-SUFFIX,mqqad.cs0309.html5.qq.com,REJECT
 DOMAIN-SUFFIX,mqqad.html5.qq.com,REJECT
@@ -4189,7 +4188,6 @@ DOMAIN-SUFFIX,qooic.com,REJECT
 DOMAIN-SUFFIX,qq.tapiche.cn,REJECT
 DOMAIN-SUFFIX,qq2.co,REJECT
 DOMAIN-SUFFIX,qq61.com,REJECT
-DOMAIN-SUFFIX,qqadapt.qpic.cn,REJECT
 DOMAIN-SUFFIX,qqhuhu.com,REJECT
 DOMAIN-SUFFIX,qqm98.com,REJECT
 DOMAIN-SUFFIX,qqzu.com,REJECT
@@ -5340,6 +5338,7 @@ PROCESS-NAME,Backup and Sync,PROXY
 PROCESS-NAME,Day One,PROXY
 PROCESS-NAME,Dropbox,PROXY
 PROCESS-NAME,node-webkit,PROXY
+PROCESS-NAME,Google Drive File Stream,PROXY
 PROCESS-NAME,Resilio Sync,PROXY
 PROCESS-NAME,Spotify,PROXY
 PROCESS-NAME,Telegram,PROXY
@@ -5357,8 +5356,13 @@ USER-AGENT,Instagram*,PROXY
 USER-AGENT,Resilio Sync*,PROXY
 USER-AGENT,SoundCloud*,PROXY
 USER-AGENT,Speedtest*,PROXY
+USER-AGENT,WeMusic*,PROXY
 USER-AGENT,WhatsApp*,PROXY
 USER-AGENT,YouTube*,PROXY
+
+// Area
+URL-REGEX,*\.jp,PROXY
+URL-REGEX,*\.tw,PROXY
 
 // BBC
 USER-AGENT,BBCiPlayer*,PROXY
@@ -5366,10 +5370,6 @@ DOMAIN-KEYWORD,co.uk,PROXY
 DOMAIN-KEYWORD,uk-live,PROXY
 DOMAIN-SUFFIX,bbc.co,PROXY
 DOMAIN-SUFFIX,bbc.com,PROXY
-
-// Area
-URL-REGEX,*\.jp,PROXY
-URL-REGEX,*\.tw,PROXY
 
 // Line
 DOMAIN-SUFFIX,lin.ee,PROXY
@@ -5399,6 +5399,9 @@ DOMAIN-SUFFIX,fanatical, PROXY
 DOMAIN-SUFFIX,humblebundle.com,PROXY
 DOMAIN-SUFFIX,steamcommunity.com,PROXY
 DOMAIN-SUFFIX,steamstatic.com,PROXY
+
+// WeMusic
+DOMAIN-KEYWORD,joox,PROXY
 
 // Top blocked sites
 DOMAIN-SUFFIX,2o7.net,PROXY
@@ -5500,6 +5503,7 @@ DOMAIN-SUFFIX,cocoapods.org,PROXY
 DOMAIN-SUFFIX,comodoca.com,PROXY
 DOMAIN-SUFFIX,content.office.net,PROXY
 DOMAIN-SUFFIX,culturedcode.com ,PROXY
+DOMAIN-SUFFIX,cygames.jp ,PROXY
 DOMAIN-SUFFIX,d.pr,PROXY
 DOMAIN-SUFFIX,danilo.to,PROXY
 DOMAIN-SUFFIX,daolan.net,PROXY
@@ -5741,6 +5745,7 @@ DOMAIN-SUFFIX,servebom.com,PROXY
 DOMAIN-SUFFIX,sfx.ms,PROXY
 DOMAIN-SUFFIX,shadowsocks.org,PROXY
 DOMAIN-SUFFIX,sharethis.com,PROXY
+DOMAIN-SUFFIX,shadowverse.jp,PROXY
 DOMAIN-SUFFIX,shazam.com,PROXY
 DOMAIN-SUFFIX,shutterstock.com,PROXY
 DOMAIN-SUFFIX,sidelinesnews.com,PROXY
@@ -5765,6 +5770,7 @@ DOMAIN-SUFFIX,soundcloud.com,PROXY
 DOMAIN-SUFFIX,sourceforge.net,PROXY
 DOMAIN-SUFFIX,sowers.org.hk,PROXY
 DOMAIN-SUFFIX,speedsmart.net,PROXY
+DOMAIN-SUFFIX,speedtest.net,PROXY
 DOMAIN-SUFFIX,spike.com,PROXY
 DOMAIN-SUFFIX,spoti.fi,Spotify
 DOMAIN-SUFFIX,squarespace.com,PROXY
@@ -6292,7 +6298,6 @@ DOMAIN-SUFFIX,sogoucdn.com,Domestic
 DOMAIN-SUFFIX,sohu.com,Domestic
 DOMAIN-SUFFIX,soku.com,Domestic
 DOMAIN-SUFFIX,soso.com,Domestic
-DOMAIN-SUFFIX,speedtest.net,Domestic
 DOMAIN-SUFFIX,sspai.com,Domestic
 DOMAIN-SUFFIX,startssl.com,Domestic
 DOMAIN-SUFFIX,store.steampowered.com,Domestic
