--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Apr 9, 2018 at 00:16
+# Apr 9, 2018 at 13:07
 
 [Rule]
 # Custom
@@ -462,7 +462,6 @@ DOMAIN-SUFFIX,wwis-dubc1-vip60.adobe.com,REJECT
 
 // Ali
 DOMAIN-SUFFIX,a.alimama.cn,REJECT
-DOMAIN-SUFFIX,acjs.aliyun.com,REJECT
 DOMAIN-SUFFIX,acookie.alimama.com,REJECT
 DOMAIN-SUFFIX,acs4baichuan.m.taobao.com,REJECT
 DOMAIN-SUFFIX,adash.m.taobao.com,REJECT
@@ -490,7 +489,6 @@ DOMAIN-SUFFIX,banner.alimama.com,REJECT
 DOMAIN-SUFFIX,bm.alimama.cn,REJECT
 DOMAIN-SUFFIX,bmvip.alimama.cn,REJECT
 DOMAIN-SUFFIX,c.alimama.com,REJECT
-DOMAIN-SUFFIX,c-adash.m.taobao.com,REJECT
 DOMAIN-SUFFIX,cb.alimama.cn,REJECT
 DOMAIN-SUFFIX,cdn-ads.oss-cn-shanghai.aliyuncs.com,REJECT
 DOMAIN-SUFFIX,cpc.click.alimama.com,REJECT
@@ -501,7 +499,6 @@ DOMAIN-SUFFIX,dressimage.img-cn-beijing.aliyuncs.com,REJECT
 DOMAIN-SUFFIX,fs-uc-nearme-com-cn.oss-cn-hangzhou.aliyuncs.com,REJECT
 DOMAIN-SUFFIX,gen.alicdn.com,REJECT
 DOMAIN-SUFFIX,gma.alicdn.com,REJECT
-DOMAIN-SUFFIX,hydra.alibaba.com,REJECT
 DOMAIN-SUFFIX,img.alimama.cn,REJECT
 DOMAIN-SUFFIX,img-dsp.oss-cn-beijing.aliyuncs.com,REJECT
 DOMAIN-SUFFIX,ipinyou.com,REJECT
@@ -5060,7 +5057,6 @@ DOMAIN-SUFFIX,yin1.zgpingshu.com,REJECT
 DOMAIN-SUFFIX,yinhaijuan.com,REJECT
 DOMAIN-SUFFIX,yinooo.com,REJECT
 DOMAIN-SUFFIX,yinyuehu.cn,REJECT
-DOMAIN-SUFFIX,yiqifa.com,REJECT
 DOMAIN-SUFFIX,yiranxian.cn,REJECT
 DOMAIN-SUFFIX,yiwk.com,REJECT
 DOMAIN-SUFFIX,yiwuds.com,REJECT
@@ -5355,7 +5351,6 @@ USER-AGENT,com.google.ios.youtube*,PROXY
 USER-AGENT,Instagram*,PROXY
 USER-AGENT,Resilio Sync*,PROXY
 USER-AGENT,SoundCloud*,PROXY
-USER-AGENT,Speedtest*,PROXY
 USER-AGENT,WeMusic*,PROXY
 USER-AGENT,WhatsApp*,PROXY
 USER-AGENT,YouTube*,PROXY
@@ -5770,7 +5765,6 @@ DOMAIN-SUFFIX,soundcloud.com,PROXY
 DOMAIN-SUFFIX,sourceforge.net,PROXY
 DOMAIN-SUFFIX,sowers.org.hk,PROXY
 DOMAIN-SUFFIX,speedsmart.net,PROXY
-DOMAIN-SUFFIX,speedtest.net,PROXY
 DOMAIN-SUFFIX,spike.com,PROXY
 DOMAIN-SUFFIX,spoti.fi,Spotify
 DOMAIN-SUFFIX,squarespace.com,PROXY
@@ -6088,6 +6082,7 @@ USER-AGENT,Moke*,Domestic
 USER-AGENT,OneDrive*,Domestic
 USER-AGENT,osee2unifiedRelease*,Domestic
 USER-AGENT,QQ*,Domestic
+USER-AGENT,Speedtest*,Domestic
 USER-AGENT,TeamViewer*,Domestic
 USER-AGENT,TIM*,Domestic
 USER-AGENT,WebTorrent*,Domestic
@@ -6298,6 +6293,7 @@ DOMAIN-SUFFIX,sogoucdn.com,Domestic
 DOMAIN-SUFFIX,sohu.com,Domestic
 DOMAIN-SUFFIX,soku.com,Domestic
 DOMAIN-SUFFIX,soso.com,Domestic
+DOMAIN-SUFFIX,speedtest.net,Domestic
 DOMAIN-SUFFIX,sspai.com,Domestic
 DOMAIN-SUFFIX,startssl.com,Domestic
 DOMAIN-SUFFIX,store.steampowered.com,Domestic
@@ -6384,6 +6380,16 @@ FINAL,Others
 
 
 [UDP Rule]
+// TeamViewer
+PROCESS-NAME,TeamViewer,Domestic
+
+IP-CIDR,139.220.243.27/32,Domestic,no-resolve
+IP-CIDR,172.16.102.56/32,Domestic,no-resolve
+IP-CIDR,185.188.32.1/28,Domestic,no-resolve
+IP-CIDR,221.226.128.146/32,Domestic,no-resolve
+
+
+// Epicgames
 DOMAIN-KEYWORD,epicgames,PROXY,force-remote-dns
 DOMAIN-SUFFIX,helpshift.com,PROXY,force-remote-dns
 
