--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Apr 9, 2018 at 13:07
+# Apr 10, 2018 at 13:53
 
 [Rule]
 # Custom
@@ -1819,6 +1819,7 @@ DOMAIN-SUFFIX,acuityplatform.com,REJECT
 DOMAIN-SUFFIX,acwgf.com,REJECT
 DOMAIN-SUFFIX,acxiom-online.com,REJECT
 DOMAIN-SUFFIX,ad.1111cpc.com,REJECT
+DOMAIN-SUFFIX,ad.12306.cn,REJECT
 DOMAIN-SUFFIX,ad.17173.com,REJECT
 DOMAIN-SUFFIX,ad.3.cn,REJECT
 DOMAIN-SUFFIX,ad.360yield.com,REJECT
@@ -6081,6 +6082,7 @@ USER-AGENT,Microsoft*,Domestic
 USER-AGENT,Moke*,Domestic
 USER-AGENT,OneDrive*,Domestic
 USER-AGENT,osee2unifiedRelease*,Domestic
+USER-AGENT,PayPal*,Domestic
 USER-AGENT,QQ*,Domestic
 USER-AGENT,Speedtest*,Domestic
 USER-AGENT,TeamViewer*,Domestic
@@ -6259,6 +6261,7 @@ DOMAIN-SUFFIX,ourdvs.com,Domestic
 DOMAIN-SUFFIX,outlook.com,Domestic
 DOMAIN-SUFFIX,overcast.fm,Domestic
 DOMAIN-SUFFIX,paypal.com,Domestic
+DOMAIN-SUFFIX,paypalobjects.com,Domestic
 DOMAIN-SUFFIX,pgyer.com,Domestic
 DOMAIN-SUFFIX,pixiv.net,Domestic
 DOMAIN-SUFFIX,pstatp.com,Domestic
@@ -6375,25 +6378,6 @@ IP-CIDR,192.168.0.0/16,DIRECT
 // Detect local network
 GEOIP,CN,Domestic
 // Use Proxy for all others
-FINAL,Others
-
-
-
-[UDP Rule]
-// TeamViewer
-PROCESS-NAME,TeamViewer,Domestic
-
-IP-CIDR,139.220.243.27/32,Domestic,no-resolve
-IP-CIDR,172.16.102.56/32,Domestic,no-resolve
-IP-CIDR,185.188.32.1/28,Domestic,no-resolve
-IP-CIDR,221.226.128.146/32,Domestic,no-resolve
-
-
-// Epicgames
-DOMAIN-KEYWORD,epicgames,PROXY,force-remote-dns
-DOMAIN-SUFFIX,helpshift.com,PROXY,force-remote-dns
-
-GEOIP,CN,Domestic
 FINAL,Others
 
 
@@ -6932,6 +6916,10 @@ www.gmail.com = 216.58.203.184
 
 // Super kechengbiao
 ^https?://182.92.244.70/d/json/1.1 - reject
+
+// Feizhu
+^https?://acs.m.taobao.com/gw/mtop.trip.activity.querytmsresources/1.0\?type=originaljson - reject
+
 
 // Other
 ^https?://[^(apple|10010)]+\.(com|cn)/ad(s|v)?(/|.js) - reject
