--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Apr 10, 2018 at 13:53
+# Apr 10, 2018 at 15:09
 
 [Rule]
 # Custom
@@ -1158,10 +1158,6 @@ DOMAIN-SUFFIX,q.i.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,qqshow2-item.qq.com,REJECT
 DOMAIN-SUFFIX,qss-client.qq.com,REJECT
 DOMAIN-SUFFIX,recmd.html5.qq.com,REJECT
-DOMAIN-SUFFIX,report.huatuo.qq.com,REJECT
-DOMAIN-SUFFIX,report.qcloud.com,REJECT
-DOMAIN-SUFFIX,report.qq.com,REJECT
-DOMAIN-SUFFIX,report.vip.qq.com,REJECT
 DOMAIN-SUFFIX,rh.qq.com,REJECT
 DOMAIN-SUFFIX,rich.qq.com,REJECT
 DOMAIN-SUFFIX,rm.gdt.qq.com,REJECT
@@ -6285,6 +6281,7 @@ DOMAIN-SUFFIX,rarbg.to,Domestic
 DOMAIN-SUFFIX,rrmj.tv,Domestic
 DOMAIN-SUFFIX,ruguoapp.com,Domestic
 DOMAIN-SUFFIX,sandai.net,Domestic
+DOMAIN-SUFFIX,sf-express.com,Domestic
 DOMAIN-SUFFIX,sinaapp.com,Domestic
 DOMAIN-SUFFIX,sinaimg.cn,Domestic
 DOMAIN-SUFFIX,sinaimg.com,Domestic
