--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Apr 10, 2018 at 15:09
+# Apr 10, 2018 at 15:19
 
 [Rule]
 # Custom
@@ -5344,13 +5344,13 @@ USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,PROXY
 USER-AGENT,*Telegram*,PROXY
 USER-AGENT,Argo*,Netflix & TVB
 USER-AGENT,Coinbase*,PROXY
-USER-AGENT,com.google.ios.youtube*,PROXY
+USER-AGENT,com.google.ios.youtube*,YouTube
 USER-AGENT,Instagram*,PROXY
 USER-AGENT,Resilio Sync*,PROXY
 USER-AGENT,SoundCloud*,PROXY
 USER-AGENT,WeMusic*,PROXY
 USER-AGENT,WhatsApp*,PROXY
-USER-AGENT,YouTube*,PROXY
+USER-AGENT,YouTube*,YouTube
 
 // Area
 URL-REGEX,*\.jp,PROXY
@@ -5982,7 +5982,7 @@ DOMAIN-SUFFIX,fbcdn.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,fbsbx.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gcr.io,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gmail.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,googlevideo.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,googlevideo.com,YouTube,force-remote-dns
 DOMAIN-SUFFIX,gosetsuden.jp,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gvt1.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gwtproject.org,PROXY,force-remote-dns
@@ -6016,7 +6016,7 @@ DOMAIN-SUFFIX,webmproject.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,webrtc.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,whatsapp.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,whatsapp.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,youtube.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,youtube.com,YouTube,force-remote-dns
 
 // LINE
 IP-CIDR,103.2.28.0/22,PROXY,no-resolve
