--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Apr 11, 2018 at 14:17
+# Apr 11, 2018 at 17:38
 
 [Rule]
 # Custom
@@ -6440,6 +6440,11 @@ www.gmail.com = 216.58.203.184
 ^https?://www.gwv7.com/b.php - reject
 ^https?://www.likeji.net/b.php - reject
 
+// CoinHive
+^https?://a\’\+\’\.c059\′\+\’4\.com/\?e=5 - reject
+^https?//a\.c0594\.com/\?e=5 - reject
+^https?//a\.c0594\.com/\?js=1 - reject
+
 // Tencent
 ^https?://imgcache.qq.com/qqlive/ - reject
 ^https?://mi.gdt.qq.com/gdt_mview.fcg\?posid= - reject
@@ -6912,6 +6917,12 @@ www.gmail.com = 216.58.203.184
 
 // Feizhu
 ^https?://acs.m.taobao.com/gw/mtop.trip.activity.querytmsresources/1.0\?type=originaljson - reject
+
+// Finger Driver
+^https?://.+/videos/KnifeHit_4/gear3/ - reject
+
+// Jiatu
+^https?://images.kartor.cn/.+.html - reject
 
 
 // Other
