--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Apr 11, 2018 at 17:38
+# Apr 12, 2018 at 17:33
 
 [Rule]
 # Custom
@@ -6372,6 +6372,10 @@ IP-CIDR,192.168.0.0/16,DIRECT
 GEOIP,CN,Domestic
 // Use Proxy for all others
 FINAL,Others
+
+
+
+// TestFlight
 
 
 
