--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Apr 12, 2018 at 17:33
+# Apr 13, 2018 at 15:38
 
 [Rule]
 # Custom
@@ -540,6 +540,7 @@ DOMAIN-SUFFIX,yiliao.hupan.com,REJECT
 
 // Apple
 DOMAIN-SUFFIX,adserver.unityads.unity3d.com,REJECT
+DOMAIN-SUFFIX,config.unityads.unity3d.com,REJECT
 DOMAIN-SUFFIX,iadsdk.apple.com,REJECT
 
 // Auto home
@@ -1728,6 +1729,7 @@ DOMAIN-SUFFIX,a.5ykj.com,REJECT
 DOMAIN-SUFFIX,a.80982.org,REJECT
 DOMAIN-SUFFIX,a.ads1.msn.com,REJECT
 DOMAIN-SUFFIX,a.ads2.msn.com,REJECT
+DOMAIN-SUFFIX,a.applovin.com,REJECT
 DOMAIN-SUFFIX,a.armystar.com,REJECT
 DOMAIN-SUFFIX,a.baiy.net,REJECT
 DOMAIN-SUFFIX,a.baomihua.com,REJECT
@@ -2017,6 +2019,7 @@ DOMAIN-SUFFIX,ads.feedly.com,REJECT
 DOMAIN-SUFFIX,ads.genieessp.com,REJECT
 DOMAIN-SUFFIX,ads.gionee.com,REJECT
 DOMAIN-SUFFIX,ads.gmodules.com,REJECT
+DOMAIN-SUFFIX,ads.heyzap.com,REJECT
 DOMAIN-SUFFIX,ads.mopud.com,REJECT
 DOMAIN-SUFFIX,ads.msn.com,REJECT
 DOMAIN-SUFFIX,ads.newtentionassets.net,REJECT
@@ -2431,6 +2434,7 @@ DOMAIN-SUFFIX,c.netu.tv,REJECT
 DOMAIN-SUFFIX,c.wrating.com,REJECT
 DOMAIN-SUFFIX,c0.ifengimg.com,REJECT
 DOMAIN-SUFFIX,c0563.com,REJECT
+DOMAIN-SUFFIX,c0594.com,REJECT
 DOMAIN-SUFFIX,c0i8h8ac7e.bid,REJECT
 DOMAIN-SUFFIX,c1.4qx.net,REJECT
 DOMAIN-SUFFIX,c1.adform.net,REJECT
@@ -2444,6 +2448,7 @@ DOMAIN-SUFFIX,cacafly.net,REJECT
 DOMAIN-SUFFIX,cache.soloth.com,REJECT
 DOMAIN-SUFFIX,cachead.com,REJECT
 DOMAIN-SUFFIX,cachesit.com,REJECT
+DOMAIN-SUFFIX,cache-ssl.celtra.com,REJECT
 DOMAIN-SUFFIX,cadvv.heraldm.com,REJECT
 DOMAIN-SUFFIX,cadvv.koreaherald.com,REJECT
 DOMAIN-SUFFIX,caiyifz.com,REJECT
@@ -2696,6 +2701,7 @@ DOMAIN-SUFFIX,d0.xcar.com.cn,REJECT
 DOMAIN-SUFFIX,d1ad.com,REJECT
 DOMAIN-SUFFIX,d1grtyyel8f1mh.cloudfront.net,REJECT
 DOMAIN-SUFFIX,d1zgderxoe1a.cloudfront.net,REJECT
+DOMAIN-SUFFIX,d2qkpebv23oowx.cloudfront.net,REJECT
 DOMAIN-SUFFIX,d36eyd5j1kt1m6.cloudfront.net,REJECT
 DOMAIN-SUFFIX,d5nxst8fruw4z.cloudfront.net,REJECT
 DOMAIN-SUFFIX,d5p.de17a.com,REJECT
@@ -3165,6 +3171,7 @@ DOMAIN-SUFFIX,govgift.com,REJECT
 DOMAIN-SUFFIX,govids.net,REJECT
 DOMAIN-SUFFIX,gp.jstv.com,REJECT
 DOMAIN-SUFFIX,gqswg.com,REJECT
+DOMAIN-SUFFIX,graph.facebook.com,REJECT
 DOMAIN-SUFFIX,green.erne.co,REJECT
 DOMAIN-SUFFIX,greenhouseglobal.cn,REJECT
 DOMAIN-SUFFIX,gridsum.com,REJECT
@@ -3770,6 +3777,7 @@ DOMAIN-SUFFIX,mdotm.com,REJECT
 DOMAIN-SUFFIX,mdpjnppsbjv.bid,REJECT
 DOMAIN-SUFFIX,mdrecv.app.cntvwb.cn,REJECT
 DOMAIN-SUFFIX,mealsandsteals.sandiego6.com,REJECT
+DOMAIN-SUFFIX,med.heyzap.com,REJECT
 DOMAIN-SUFFIX,medal.blog.csdn.net,REJECT
 DOMAIN-SUFFIX,media.trafficfactory.biz,REJECT
 DOMAIN-SUFFIX,media8.cn,REJECT
@@ -4223,6 +4231,7 @@ DOMAIN-SUFFIX,rad.live.com,REJECT
 DOMAIN-SUFFIX,rad.microsoft.com,REJECT
 DOMAIN-SUFFIX,rad.msn.com,REJECT
 DOMAIN-SUFFIX,radar.cedexis.com,REJECT
+DOMAIN-SUFFIX,rayjump.com,REJECT
 DOMAIN-SUFFIX,rbp.emea.mxptint.net,REJECT
 DOMAIN-SUFFIX,rbp.mxptint.net,REJECT
 DOMAIN-SUFFIX,rbywg.com,REJECT
@@ -4299,7 +4308,6 @@ DOMAIN-SUFFIX,runiman.com,REJECT
 DOMAIN-SUFFIX,ruxianke.com,REJECT
 DOMAIN-SUFFIX,rwjfs.com,REJECT
 DOMAIN-SUFFIX,rxwan.com,REJECT
-DOMAIN-SUFFIX,rayjump.com,REJECT
 DOMAIN-SUFFIX,s.0.0.0.0.cn,REJECT
 DOMAIN-SUFFIX,s.051352.com,REJECT
 DOMAIN-SUFFIX,s.35kds.com,REJECT
@@ -4313,6 +4321,7 @@ DOMAIN-SUFFIX,s.l8l9.com,REJECT
 DOMAIN-SUFFIX,s.wrating.com,REJECT
 DOMAIN-SUFFIX,s.ysxufeng.com,REJECT
 DOMAIN-SUFFIX,s.zixuntop.com,REJECT
+DOMAIN-SUFFIX,s0.2mdn.net,REJECT
 DOMAIN-SUFFIX,s1.hiapk.com,REJECT
 DOMAIN-SUFFIX,s1.qiuyi.cn,REJECT
 DOMAIN-SUFFIX,s400cc.com,REJECT
@@ -4915,6 +4924,7 @@ DOMAIN-SUFFIX,x.adpro.cn,REJECT
 DOMAIN-SUFFIX,x.castanet.net,REJECT
 DOMAIN-SUFFIX,x.cnxad.com,REJECT
 DOMAIN-SUFFIX,x.eroticity.net,REJECT
+DOMAIN-SUFFIX,x.heyzap.com,REJECT
 DOMAIN-SUFFIX,x.jd.com,REJECT
 DOMAIN-SUFFIX,x.ligatus.com,REJECT
 DOMAIN-SUFFIX,x.vipergirls.to,REJECT
@@ -5358,6 +5368,10 @@ DOMAIN-KEYWORD,co.uk,PROXY
 DOMAIN-KEYWORD,uk-live,PROXY
 DOMAIN-SUFFIX,bbc.co,PROXY
 DOMAIN-SUFFIX,bbc.com,PROXY
+
+// Epicgames
+DOMAIN-KEYWORD,epicgames,PROXY,force-remote-dns
+DOMAIN-SUFFIX,helpshift.com,PROXY,force-remote-dns
 
 // Line
 DOMAIN-SUFFIX,lin.ee,PROXY
@@ -6053,6 +6067,7 @@ IP-CIDR,27.0.236.0/22,PROXY,no-resolve
 // Client
 PROCESS-NAME,Paws for Trello,Domestic
 PROCESS-NAME,Thunder,Domestic
+PROCESS-NAME,TeamViewer,Domestic
 PROCESS-NAME,trustd,Domestic
 PROCESS-NAME,WebTorrent,Domestic
 PROCESS-NAME,WeChat,Domestic
@@ -6116,6 +6131,10 @@ DOMAIN-SUFFIX,firebaseio.com,Domestic
 
 // TeamViewer
 IP-CIDR,109.239.140.0/24,Domestic,no-resolve
+IP-CIDR,139.220.243.27/32,Domestic,no-resolve
+IP-CIDR,172.16.102.56/32,Domestic,no-resolve
+IP-CIDR,185.188.32.1/28,Domestic,no-resolve
+IP-CIDR,221.226.128.146/32,Domestic,no-resolve
 
 
 
@@ -6443,11 +6462,6 @@ www.gmail.com = 216.58.203.184
 ^https?://www.babyye.com/b.php - reject
 ^https?://www.gwv7.com/b.php - reject
 ^https?://www.likeji.net/b.php - reject
-
-// CoinHive
-^https?://a\’\+\’\.c059\′\+\’4\.com/\?e=5 - reject
-^https?//a\.c0594\.com/\?e=5 - reject
-^https?//a\.c0594\.com/\?js=1 - reject
 
 // Tencent
 ^https?://imgcache.qq.com/qqlive/ - reject
