--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Apr 15, 2018 at 16:36
+# Apr 17, 2018 at 15:12
 
 [Rule]
 # Custom
@@ -486,18 +486,14 @@ DOMAIN-SUFFIX,pics.taobaocdn.com,REJECT
 DOMAIN-SUFFIX,pindao.huoban.taobao.com,REJECT
 DOMAIN-SUFFIX,re.m.taobao.com,REJECT
 DOMAIN-SUFFIX,re.taobao.com,REJECT
-DOMAIN-SUFFIX,redirect.simba.taobao.com,REJECT
 DOMAIN-SUFFIX,rj.m.taobao.co,REJECT
 DOMAIN-SUFFIX,rj.m.taobao.com,REJECT
 DOMAIN-SUFFIX,sdkinit.taobao.com,REJECT
 DOMAIN-SUFFIX,show.re.taobao.com,REJECT
 DOMAIN-SUFFIX,simaba.taobao.com,REJECT
-DOMAIN-SUFFIX,simba.m.taobao.com,REJECT
-DOMAIN-SUFFIX,simba.taobao.com,REJECT
 DOMAIN-SUFFIX,strip.alicdn.com,REJECT
 DOMAIN-SUFFIX,strip.taobaocdn.com,REJECT
 DOMAIN-SUFFIX,temai.taobao.com,REJECT
-DOMAIN-SUFFIX,tns.simba.taobao.com,REJECT
 DOMAIN-SUFFIX,ttjx-online.cn-hangzhou.log.aliyuncs.com,REJECT
 DOMAIN-SUFFIX,tunion-api.m.taobao.com,REJECT
 DOMAIN-SUFFIX,unitacs.m.taobao.com,REJECT
@@ -1052,7 +1048,6 @@ DOMAIN-SUFFIX,c2.l.qq.com,REJECT
 DOMAIN-SUFFIX,ca.gtimg.com,REJECT
 DOMAIN-SUFFIX,canvas.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,cb.l.qq.com,REJECT
-DOMAIN-SUFFIX,cdn.ark.qq.com,REJECT
 DOMAIN-SUFFIX,cfg.imtt.qq.com,REJECT
 DOMAIN-SUFFIX,cgi.connect.qq.com,REJECT
 DOMAIN-SUFFIX,client.show.qq.com,REJECT
@@ -4359,7 +4354,6 @@ DOMAIN-SUFFIX,shanghaironghua.com,REJECT
 DOMAIN-SUFFIX,shanglinli.com,REJECT
 DOMAIN-SUFFIX,share.gzdsw.com,REJECT
 DOMAIN-SUFFIX,sharedaddomain.com,REJECT
-DOMAIN-SUFFIX,sharethis.com,REJECT
 DOMAIN-SUFFIX,sharrysweb.com,REJECT
 DOMAIN-SUFFIX,shbywsd.cn,REJECT
 DOMAIN-SUFFIX,shenleyuni.com,REJECT
@@ -5337,6 +5331,10 @@ DOMAIN-KEYWORD,uk-live,PROXY
 DOMAIN-SUFFIX,bbc.co,PROXY
 DOMAIN-SUFFIX,bbc.com,PROXY
 
+// CHOCO TV
+USER-AGENT,TwDramas,PROXY
+DOMAIN-SUFFIX,chocotv.com.tw,PROXY
+
 // Epicgames
 DOMAIN-KEYWORD,epicgames,PROXY,force-remote-dns
 DOMAIN-SUFFIX,helpshift.com,PROXY,force-remote-dns
@@ -5543,6 +5541,7 @@ DOMAIN-SUFFIX,gfx.ms,PROXY
 DOMAIN-SUFFIX,ggpht.com,PROXY
 DOMAIN-SUFFIX,ghostnoteapp.com,PROXY
 DOMAIN-SUFFIX,git.io,PROXY
+DOMAIN-SUFFIX,gitbook.com,PROXY
 DOMAIN-SUFFIX,github.com,PROXY
 DOMAIN-SUFFIX,github.io,PROXY
 DOMAIN-SUFFIX,githubapp.com,PROXY
@@ -5994,8 +5993,6 @@ DOMAIN-SUFFIX,unfiltered.news,PROXY,force-remote-dns
 DOMAIN-SUFFIX,waveprotocol.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,webmproject.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,webrtc.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,whatsapp.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,whatsapp.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,youtube.com,YouTube,force-remote-dns
 
 // LINE
@@ -6051,6 +6048,7 @@ USER-AGENT,arrowio*,Domestic
 USER-AGENT,balls*,Domestic
 USER-AGENT,Best%20Trace*,Domestic
 USER-AGENT,cmblife*,Domestic
+USER-AGENT,eusoft_ting_en_iphone,Domestic
 USER-AGENT,hide*,Domestic
 USER-AGENT,JDLife*,Domestic
 USER-AGENT,LastPass*,Domestic
@@ -6065,6 +6063,7 @@ USER-AGENT,QQ*,Domestic
 USER-AGENT,Speedtest*,Domestic
 USER-AGENT,TeamViewer*,Domestic
 USER-AGENT,TIM*,Domestic
+USER-AGENT,ting_en,Domestic
 USER-AGENT,WebTorrent*,Domestic
 USER-AGENT,WeChat*,Domestic
 
