--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Apr 17, 2018 at 15:12
+# Apr 17, 2018 at 16:43
 
 [Rule]
 # Custom
@@ -5301,7 +5301,7 @@ PROCESS-NAME,Dropbox,PROXY
 PROCESS-NAME,node-webkit,PROXY
 PROCESS-NAME,Google Drive File Stream,PROXY
 PROCESS-NAME,Resilio Sync,PROXY
-PROCESS-NAME,Spotify,PROXY
+PROCESS-NAME,Spotify,Spotify
 PROCESS-NAME,Telegram,PROXY
 PROCESS-NAME,Tweetbot,PROXY
 PROCESS-NAME,Twitter,PROXY
