--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Apr 19, 2018 at 15:02
+# Apr 20, 2018 at 17:07
 
 [Rule]
 # Custom
@@ -584,6 +584,7 @@ DOMAIN-SUFFIX,dxp.baidu.com,REJECT
 DOMAIN-SUFFIX,dzl.baidu.com,REJECT
 DOMAIN-SUFFIX,eclick.baidu.com,REJECT
 DOMAIN-SUFFIX,eiv.baidu.com,REJECT
+DOMAIN-SUFFIX,em.baidu.com,REJECT
 DOMAIN-SUFFIX,entry.baidu.com,REJECT
 DOMAIN-SUFFIX,ers.baidu.com,REJECT
 DOMAIN-SUFFIX,f10.baidu.com,REJECT
@@ -735,8 +736,6 @@ DOMAIN-SUFFIX,ads.google.com,REJECT
 DOMAIN-SUFFIX,afd.l.google.com,REJECT
 DOMAIN-SUFFIX,doubleclick.com,REJECT
 DOMAIN-SUFFIX,doubleclick.net,REJECT
-DOMAIN-SUFFIX,googleadservices.com,REJECT
-DOMAIN-SUFFIX,googleadsserving.cn,REJECT
 DOMAIN-SUFFIX,googlesyndication.com,REJECT
 DOMAIN-SUFFIX,googletagmanager.com,REJECT
 DOMAIN-SUFFIX,googletakes.com,REJECT
@@ -756,7 +755,6 @@ DOMAIN-SUFFIX,img-x.jd.com,REJECT
 // Kugou
 DOMAIN-SUFFIX,ads.bssdl.kugou.com,REJECT
 DOMAIN-SUFFIX,ads.service.kugou.com,REJECT
-DOMAIN-SUFFIX,adserviceretry.kugou.com,REJECT
 DOMAIN-SUFFIX,adsfile.bssdlbig.kugou.com,REJECT
 DOMAIN-SUFFIX,channel.fanxing.kugou.com,REJECT
 DOMAIN-SUFFIX,d.kugou.com,REJECT
@@ -915,6 +913,7 @@ DOMAIN-SUFFIX,int.dpool.sina.com.cn,REJECT
 DOMAIN-SUFFIX,interest.mix.sina.com.cn,REJECT
 DOMAIN-SUFFIX,log.interest.mix.sina.com.cn,REJECT
 DOMAIN-SUFFIX,log.mix.sina.com.cn,REJECT
+DOMAIN-SUFFIX,log.sina.cn,REJECT
 DOMAIN-SUFFIX,m.beacon.sina.com.cn,REJECT
 DOMAIN-SUFFIX,m.game.weibo.cn,REJECT
 DOMAIN-SUFFIX,mg.games.sina.com.cn,REJECT
@@ -933,6 +932,7 @@ DOMAIN-SUFFIX,rm.sina.com.cn,REJECT
 DOMAIN-SUFFIX,rs.sinajs.cn,REJECT
 DOMAIN-SUFFIX,s.alitui.weibo.com,REJECT
 DOMAIN-SUFFIX,s.img.mix.sina.com.cn,REJECT
+DOMAIN-SUFFIX,sapi.sina.cn,REJECT
 DOMAIN-SUFFIX,sax.sina.cn,REJECT
 DOMAIN-SUFFIX,sax.sina.com.cn,REJECT
 DOMAIN-SUFFIX,saxn.sina.com.cn,REJECT
@@ -956,6 +956,7 @@ DOMAIN-SUFFIX,widget.weibo.com,REJECT
 DOMAIN-SUFFIX,woocall.sina.com.cn,REJECT
 DOMAIN-SUFFIX,zc.biz.weibo.com,REJECT
 DOMAIN-SUFFIX,zymo.mps.weibo.com,REJECT
+
 
 URL-REGEX,ad\d\.sina\.com,REJECT
 URL-REGEX,ad\d\.sina\.com.cn,REJECT
@@ -1370,8 +1371,10 @@ DOMAIN-KEYWORD,adnewnc,REJECT
 DOMAIN-KEYWORD,adsage,REJECT
 DOMAIN-KEYWORD,adsame,REJECT
 DOMAIN-KEYWORD,adsensor,REJECT
+DOMAIN-KEYWORD,adservice,REJECT
 DOMAIN-KEYWORD,adsmogo,REJECT
 DOMAIN-KEYWORD,adsrvmedia,REJECT
+DOMAIN-KEYWORD,adsserving,REJECT
 DOMAIN-KEYWORD,advert,REJECT
 DOMAIN-KEYWORD,adwords,REJECT
 DOMAIN-KEYWORD,allyes,REJECT
@@ -1561,6 +1564,7 @@ DOMAIN-SUFFIX,51.la,REJECT
 DOMAIN-SUFFIX,5125129.com,REJECT
 DOMAIN-SUFFIX,513hch.com,REJECT
 DOMAIN-SUFFIX,517m.cn,REJECT
+DOMAIN-SUFFIX,519397.com,REJECT
 DOMAIN-SUFFIX,51ads.com,REJECT
 DOMAIN-SUFFIX,51gxqm.com,REJECT
 DOMAIN-SUFFIX,51jumintong.com,REJECT
@@ -1657,6 +1661,7 @@ DOMAIN-SUFFIX,8le8le.com,REJECT
 DOMAIN-SUFFIX,8mfty.com,REJECT
 DOMAIN-SUFFIX,8ox.cn,REJECT
 DOMAIN-SUFFIX,911.cc,REJECT
+DOMAIN-SUFFIX,915.com,REJECT
 DOMAIN-SUFFIX,91ad.bestvogue.com,REJECT
 DOMAIN-SUFFIX,91adv.com,REJECT
 DOMAIN-SUFFIX,91hui.com,REJECT
@@ -3109,6 +3114,7 @@ DOMAIN-SUFFIX,ggdoubi.com,REJECT
 DOMAIN-SUFFIX,ggg.zj.com,REJECT
 DOMAIN-SUFFIX,ggle.lywf.me,REJECT
 DOMAIN-SUFFIX,ggmm777.com,REJECT
+DOMAIN-SUFFIX,ggmmqq.com,REJECT
 DOMAIN-SUFFIX,ggs.myzaker.com,REJECT
 DOMAIN-SUFFIX,ggw.gusuwang.com,REJECT
 DOMAIN-SUFFIX,ggw.watertu.com,REJECT
@@ -3123,7 +3129,6 @@ DOMAIN-SUFFIX,go.hangzhou.com.cn,REJECT
 DOMAIN-SUFFIX,go.mmstat.com,REJECT
 DOMAIN-SUFFIX,godloveme.cn,REJECT
 DOMAIN-SUFFIX,go-mpulse.net,REJECT
-DOMAIN-SUFFIX,googeadsserving.cn,REJECT
 DOMAIN-SUFFIX,googlecommerce.com,REJECT
 DOMAIN-SUFFIX,googletagservices.com,REJECT
 DOMAIN-SUFFIX,gosquared.com,REJECT
@@ -3238,6 +3243,7 @@ DOMAIN-SUFFIX,hqgjcm.com,REJECT
 DOMAIN-SUFFIX,hr41.cn,REJECT
 DOMAIN-SUFFIX,hr44.com,REJECT
 DOMAIN-SUFFIX,hslyqs.com,REJECT
+DOMAIN-SUFFIX,htfmbt.com,REJECT
 DOMAIN-SUFFIX,htjsk.com,REJECT
 DOMAIN-SUFFIX,httpdns.push.oppomobile.com,REJECT
 DOMAIN-SUFFIX,huahuaka.com,REJECT
@@ -3625,6 +3631,7 @@ DOMAIN-SUFFIX,localytics.com,REJECT
 DOMAIN-SUFFIX,log.collect.yinyuetai.com,REJECT
 DOMAIN-SUFFIX,log.outbrain.com,REJECT
 DOMAIN-SUFFIX,log.spotify.com,REJECT
+DOMAIN-SUFFIX,log.tu.baixing.com,REJECT
 DOMAIN-SUFFIX,log.umsns.com,REJECT
 DOMAIN-SUFFIX,log.voicecloud.cn,REJECT
 DOMAIN-SUFFIX,logs.dashlane.com,REJECT
@@ -3779,6 +3786,7 @@ DOMAIN-SUFFIX,mini.hao123.com,REJECT
 DOMAIN-SUFFIX,mini.jijiplayer.com,REJECT
 DOMAIN-SUFFIX,minisplat.cn,REJECT
 DOMAIN-SUFFIX,miniye.xjts.cn,REJECT
+DOMAIN-SUFFIX,mipujia.com,REJECT
 DOMAIN-SUFFIX,miui.hftaili.com,REJECT
 DOMAIN-SUFFIX,mlb.did.ijinshan.com,REJECT
 DOMAIN-SUFFIX,mlgrrqymdsyk.com,REJECT
@@ -3795,6 +3803,7 @@ DOMAIN-SUFFIX,moad.cn,REJECT
 DOMAIN-SUFFIX,moatads.com,REJECT
 DOMAIN-SUFFIX,mob.com,REJECT
 DOMAIN-SUFFIX,mobad.ijinshan.com,REJECT
+DOMAIN-SUFFIX,mobaders.com,REJECT
 DOMAIN-SUFFIX,mobadme.jp,REJECT
 DOMAIN-SUFFIX,mobclix.com,REJECT
 DOMAIN-SUFFIX,mobfox.com,REJECT
@@ -3893,6 +3902,7 @@ DOMAIN-SUFFIX,niuxgame77.com,REJECT
 DOMAIN-SUFFIX,njdijiani.com,REJECT
 DOMAIN-SUFFIX,njfsk.com,REJECT
 DOMAIN-SUFFIX,njq.net,REJECT
+DOMAIN-SUFFIX,njxczy.com,REJECT
 DOMAIN-SUFFIX,nkeo.top,REJECT
 DOMAIN-SUFFIX,nmbtedu.com,REJECT
 DOMAIN-SUFFIX,nmkgs.cn,REJECT
@@ -4169,6 +4179,7 @@ DOMAIN-SUFFIX,qujishu.com,REJECT
 DOMAIN-SUFFIX,qumi.com,REJECT
 DOMAIN-SUFFIX,quote.51.la,REJECT
 DOMAIN-SUFFIX,quw18.com,REJECT
+DOMAIN-SUFFIX,quyaoya.com,REJECT
 DOMAIN-SUFFIX,qxjdlf.com,REJECT
 DOMAIN-SUFFIX,qxxys.com,REJECT
 DOMAIN-SUFFIX,qyctj.com,REJECT
@@ -4360,6 +4371,7 @@ DOMAIN-SUFFIX,shenyian.net,REJECT
 DOMAIN-SUFFIX,shenyun.com,REJECT
 DOMAIN-SUFFIX,shenyun.org,REJECT
 DOMAIN-SUFFIX,shenyunperformingarts.org,REJECT
+DOMAIN-SUFFIX,shibeiou.com,REJECT
 DOMAIN-SUFFIX,shiftrro.com,REJECT
 DOMAIN-SUFFIX,shili.downxia.com,REJECT
 DOMAIN-SUFFIX,shili.wanyx.com,REJECT
@@ -4672,6 +4684,7 @@ DOMAIN-SUFFIX,tw.fgmtv.org,REJECT
 DOMAIN-SUFFIX,tw13b093.sandai.net,REJECT
 DOMAIN-SUFFIX,twb98.com,REJECT
 DOMAIN-SUFFIX,twcczhu.com,REJECT
+DOMAIN-SUFFIX,twh5.com,REJECT
 DOMAIN-SUFFIX,twinplan.com,REJECT
 DOMAIN-SUFFIX,twitterzs.com,REJECT
 DOMAIN-SUFFIX,twldmx.com,REJECT
@@ -4746,6 +4759,7 @@ DOMAIN-SUFFIX,uvclick.com,REJECT
 DOMAIN-SUFFIX,uw9377.com,REJECT
 DOMAIN-SUFFIX,uyunad.com,REJECT
 DOMAIN-SUFFIX,uzpmrbek.com,REJECT
+DOMAIN-SUFFIX,v02u9.cn,REJECT
 DOMAIN-SUFFIX,v1.log.moji.com,REJECT
 DOMAIN-SUFFIX,v2.fm.n.duokanbox.com,REJECT
 DOMAIN-SUFFIX,v2.reachmax.cn,REJECT
@@ -4941,6 +4955,7 @@ DOMAIN-SUFFIX,xiniuz.com,REJECT
 DOMAIN-SUFFIX,xinju.cc,REJECT
 DOMAIN-SUFFIX,xinray.com,REJECT
 DOMAIN-SUFFIX,xinsheng.net,REJECT
+DOMAIN-SUFFIX,xiongdong.com,REJECT
 DOMAIN-SUFFIX,xjidian.com,REJECT
 DOMAIN-SUFFIX,xk2012.com,REJECT
 DOMAIN-SUFFIX,xkwfao.com,REJECT
@@ -5108,6 +5123,7 @@ DOMAIN-SUFFIX,zeus.qj.net,REJECT
 DOMAIN-SUFFIX,zgc66.com,REJECT
 DOMAIN-SUFFIX,zgdfz6h7po.me,REJECT
 DOMAIN-SUFFIX,zgfszs.com,REJECT
+DOMAIN-SUFFIX,zgjkv.com,REJECT
 DOMAIN-SUFFIX,zgksb.com,REJECT
 DOMAIN-SUFFIX,zgty365.com,REJECT
 DOMAIN-SUFFIX,zgunion.cn,REJECT
@@ -5136,6 +5152,7 @@ DOMAIN-SUFFIX,zizcy.com,REJECT
 DOMAIN-SUFFIX,zjbdt.com,REJECT
 DOMAIN-SUFFIX,zjhim.com,REJECT
 DOMAIN-SUFFIX,zkrdy.com,REJECT
+DOMAIN-SUFFIX,zlongad.com,REJECT
 DOMAIN-SUFFIX,zo66.com,REJECT
 DOMAIN-SUFFIX,zp22938576.com,REJECT
 DOMAIN-SUFFIX,zq84.com,REJECT
@@ -6079,7 +6096,6 @@ DOMAIN-SUFFIX,bing.com,Domestic
 DOMAIN-SUFFIX,hotmail.com,Domestic
 DOMAIN-SUFFIX,live.com,Domestic
 DOMAIN-SUFFIX,live.net,Domestic
-DOMAIN-SUFFIX,microsoft.com,Domestic
 DOMAIN-SUFFIX,msn.com,Domestic
 DOMAIN-SUFFIX,office.com,Domestic
 DOMAIN-SUFFIX,office.net,Domestic
@@ -6225,7 +6241,6 @@ DOMAIN-SUFFIX,maven.org,Domestic
 DOMAIN-SUFFIX,meizu.com,Domestic
 DOMAIN-SUFFIX,mi.com,Domestic
 DOMAIN-SUFFIX,miaopai.com,Domestic
-DOMAIN-SUFFIX,microsoft.com,Domestic
 DOMAIN-SUFFIX,miui.com,Domestic
 DOMAIN-SUFFIX,miwifi.com,Domestic
 DOMAIN-SUFFIX,mob.com,Domestic
@@ -6403,6 +6418,45 @@ www.gmail.com = 216.58.203.184
 
 
 [URL Rewrite]
+
+
+// Google_Service_HTTPS_Jump
+^https?://(www.)?g.cn https://www.google.com 302
+^https?://(www.)?google.cn https://www.google.com 302
+
+
+// Anti_ISP_JD_Hijack
+^https?://coupon.m.jd.com/ https://coupon.m.jd.com/ 302
+^https?://h5.m.jd.com/ https://h5.m.jd.com/ 302
+^https?://item.m.jd.com/ https://item.m.jd.com/ 302
+^https?://m.jd.com https://m.jd.com 302
+^https?://newcz.m.jd.com/ https://newcz.m.jd.com/ 302
+^https?://p.m.jd.com/ https://p.m.jd.com/ 302
+^https?://so.m.jd.com/ https://so.m.jd.com/ 302
+^https?://union.click.jd.com/jda? http://union.click.jd.com/jda?adblock= header
+^https?://union.click.jd.com/sem.php? http://union.click.jd.com/sem.php?adblock= header
+^https?://www.jd.com/ https://www.jd.com/ 302
+
+// Anti_ISP_Taobao_Hijack
+^https?://m.taobao.com/ https://m.taobao.com/ 302
+
+// Wiki
+^https?://.+.(m.)?wikipedia.org/wiki http://www.wikiwand.com/en 302
+^https?://zh.(m.)?wikipedia.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
+^https?://zh.(m.)?wikipedia.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
+
+// Other
+^https?://cfg.m.ttkvod.com/mobile/ttk_mobile_1.8.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/ttk_mobile_1.8.txt header
+^https?://cnzz.com/ http://ogtre5vp0.bkt.clouddn.com/background.png? header
+^https?://issuecdn.baidupcs.com/issue/netdisk/guanggao/ http://ogtre5vp0.bkt.clouddn.com/background.png? header
+^https?://m.qu.la/stylewap/js/wap.js http://ogtre5vp0.bkt.clouddn.com/qu_la_wap.js 302
+^https?://m.yhd.com/1/? http://m.yhd.com/1/?adbock= 302
+^https?://n.mark.letv.com/m3u8api/ http://burpsuite.applinzi.com/Interface header
+^https?://sqimg.qq.com/ https://sqimg.qq.com/ 302
+^https?://static.m.ttkvod.com/static_cahce/index/index.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/index.txt header
+^https?://www.iqshw.com/d/js/m http://burpsuite.applinzi.com/Interface header
+^https?://www.iqshw.com/d/js/m http://rewrite.websocket.site:10/Other/Static/JS/Package.js? header
+
 
 
 // Anti_ISP_JavaScript_Injection
@@ -6952,45 +7006,6 @@ www.gmail.com = 216.58.203.184
 
 
 
-// Google_Service_HTTPS_Jump
-^https?://(www.)?g.cn https://www.google.com 302
-^https?://(www.)?google.cn https://www.google.com 302
-
-
-// Anti_ISP_JD_Hijack
-^https?://coupon.m.jd.com/ https://coupon.m.jd.com/ 302
-^https?://h5.m.jd.com/ https://h5.m.jd.com/ 302
-^https?://item.m.jd.com/ https://item.m.jd.com/ 302
-^https?://m.jd.com https://m.jd.com 302
-^https?://newcz.m.jd.com/ https://newcz.m.jd.com/ 302
-^https?://p.m.jd.com/ https://p.m.jd.com/ 302
-^https?://so.m.jd.com/ https://so.m.jd.com/ 302
-^https?://union.click.jd.com/jda? http://union.click.jd.com/jda?adblock= header
-^https?://union.click.jd.com/sem.php? http://union.click.jd.com/sem.php?adblock= header
-^https?://www.jd.com/ https://www.jd.com/ 302
-
-// Anti_ISP_Taobao_Hijack
-^https?://m.taobao.com/ https://m.taobao.com/ 302
-
-// Wiki
-^https?://.+.(m.)?wikipedia.org/wiki http://www.wikiwand.com/en 302
-^https?://zh.(m.)?wikipedia.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
-^https?://zh.(m.)?wikipedia.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
-
-// Other
-^https?://cfg.m.ttkvod.com/mobile/ttk_mobile_1.8.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/ttk_mobile_1.8.txt header
-^https?://cnzz.com/ http://ogtre5vp0.bkt.clouddn.com/background.png? header
-^https?://issuecdn.baidupcs.com/issue/netdisk/guanggao/ http://ogtre5vp0.bkt.clouddn.com/background.png? header
-^https?://m.qu.la/stylewap/js/wap.js http://ogtre5vp0.bkt.clouddn.com/qu_la_wap.js 302
-^https?://m.yhd.com/1/? http://m.yhd.com/1/?adbock= 302
-^https?://n.mark.letv.com/m3u8api/ http://burpsuite.applinzi.com/Interface header
-^https?://sqimg.qq.com/ https://sqimg.qq.com/ 302
-^https?://static.m.ttkvod.com/static_cahce/index/index.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/index.txt header
-^https?://www.iqshw.com/d/js/m http://burpsuite.applinzi.com/Interface header
-^https?://www.iqshw.com/d/js/m http://rewrite.websocket.site:10/Other/Static/JS/Package.js? header
-
-
-
 [Header Rewrite]
 ^*.bdimg.com header-del Referer
 ^*.qpic.cn header-replace User-Agent WeChat/6.5.22.32 CFNetwork/889.9 Darwin/17.2.0
@@ -7000,7 +7015,7 @@ www.gmail.com = 216.58.203.184
 ^*.cnbetacdn.com header-del Referer
 ^*.zhiding.cn header-del Referer
 ^*.c114.com.cn header-del Referer
-^http://www.biquge.com.tw header-del Cookie
+^https?://www.biquge.com.tw header-del Cookie
 ^https?://www.zhihu.com/question/ header-replace User-Agent Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.45 Safari/537.36
 
 
