--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Apr 22, 2018 at 17:41
+# Apr 22, 2018 at 22:06
 
 [Rule]
 # Custom
@@ -6350,6 +6350,7 @@ DOMAIN-SUFFIX,zealer.com,Domestic
 DOMAIN-SUFFIX,zgslb.net,Domestic
 DOMAIN-SUFFIX,zhihu.com,Domestic
 DOMAIN-SUFFIX,zhimg.com,Domestic
+DOMAIN-SUFFIX,zmz002.com,Domestic
 DOMAIN-SUFFIX,zimuzu.tv,Domestic
 
 // Accelerate direct sites
