--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Apr 22, 2018 at 22:06
+# Apr 24, 2018 at 12:45
 
 [Rule]
 # Custom
@@ -278,6 +278,7 @@ DOMAIN-SUFFIX,gorgon.youdao.com,REJECT
 DOMAIN-SUFFIX,haitaoad.nosdn.127.net,REJECT
 DOMAIN-SUFFIX,i.clkservice.youdao.com,REJECT
 DOMAIN-SUFFIX,iad.g.163.com,REJECT
+DOMAIN-SUFFIX,iadmat.nosdn.127.net,REJECT
 DOMAIN-SUFFIX,img1.126.net,REJECT
 DOMAIN-SUFFIX,img2.126.net,REJECT
 DOMAIN-SUFFIX,impservice.chnl.youdao.com,REJECT
@@ -1795,6 +1796,7 @@ DOMAIN-SUFFIX,ad.about.co.kr,REJECT
 DOMAIN-SUFFIX,ad.accessmediaproductions.com,REJECT
 DOMAIN-SUFFIX,ad.adhouyi.cn,REJECT
 DOMAIN-SUFFIX,ad.adwo.com,REJECT
+DOMAIN-SUFFIX,ad.aidalan.com,REJECT
 DOMAIN-SUFFIX,ad.api.3g.tudou.com,REJECT
 DOMAIN-SUFFIX,ad.bitmedia.io,REJECT
 DOMAIN-SUFFIX,ad.bjmama.net,REJECT
@@ -2194,6 +2196,7 @@ DOMAIN-SUFFIX,arealx.com,REJECT
 DOMAIN-SUFFIX,as.inbox.com,REJECT
 DOMAIN-SUFFIX,as.sinahk.net,REJECT
 DOMAIN-SUFFIX,as.trklinklog.com,REJECT
+DOMAIN-SUFFIX,as.yuewz.com,REJECT
 DOMAIN-SUFFIX,asd.projectfreetv.so,REJECT
 DOMAIN-SUFFIX,ashow.pcpop.com,REJECT
 DOMAIN-SUFFIX,assets.210189.com,REJECT
@@ -3337,6 +3340,7 @@ DOMAIN-SUFFIX,img.9duw.com,REJECT
 DOMAIN-SUFFIX,img.ad.zhangyue.com,REJECT
 DOMAIN-SUFFIX,img.adpush.cn,REJECT
 DOMAIN-SUFFIX,img.dawenxue.org,REJECT
+DOMAIN-SUFFIX,img.khlxw.com,REJECT
 DOMAIN-SUFFIX,img.libdd.com,REJECT
 DOMAIN-SUFFIX,img.meipic.net,REJECT
 DOMAIN-SUFFIX,img.qdscgj.com,REJECT
@@ -3479,6 +3483,7 @@ DOMAIN-SUFFIX,js.tongji.linezing.com,REJECT
 DOMAIN-SUFFIX,js.ubaike.cn,REJECT
 DOMAIN-SUFFIX,js.union-wifi.com,REJECT
 DOMAIN-SUFFIX,js.users.51.la,REJECT
+DOMAIN-SUFFIX,js.wo-x.cn,REJECT
 DOMAIN-SUFFIX,js1.2abc8.com,REJECT
 DOMAIN-SUFFIX,js1.xbaixing.com,REJECT
 DOMAIN-SUFFIX,js1.zuocai.tv,REJECT
@@ -4753,6 +4758,7 @@ DOMAIN-SUFFIX,usingde.com,REJECT
 DOMAIN-SUFFIX,uss-pid.lenovomm.com,REJECT
 DOMAIN-SUFFIX,usync.aws.rubiconproject.com,REJECT
 DOMAIN-SUFFIX,utility.rogersmedia.com,REJECT
+DOMAIN-SUFFIX,uu.feipukeplus.com,REJECT
 DOMAIN-SUFFIX,uuidapi.yunos.com,REJECT
 DOMAIN-SUFFIX,uulucky.com,REJECT
 DOMAIN-SUFFIX,uvclick.com,REJECT
@@ -6149,6 +6155,7 @@ DOMAIN-SUFFIX,aliyun.com,Domestic
 DOMAIN-SUFFIX,amap.com,Domestic
 DOMAIN-SUFFIX,analytics.126.net,Domestic
 DOMAIN-SUFFIX,apache.org,Domestic
+DOMAIN-SUFFIX,api.crisp.chat,Domestic
 DOMAIN-SUFFIX,appshike.com,Domestic
 DOMAIN-SUFFIX,appstore.com,Domestic
 DOMAIN-SUFFIX,autonavi.com,Domestic
@@ -6175,6 +6182,7 @@ DOMAIN-SUFFIX,cnbeta.com,Domestic
 DOMAIN-SUFFIX,cnbetacdn.com,Domestic
 DOMAIN-SUFFIX,conoha.jp,Domestic
 DOMAIN-SUFFIX,culturedcode.com,Domestic
+DOMAIN-SUFFIX,dct-cloud.com,Domestic
 DOMAIN-SUFFIX,didialift.com,Domestic
 DOMAIN-SUFFIX,douban.com,Domestic
 DOMAIN-SUFFIX,doubanio.com,Domestic
@@ -6223,6 +6231,7 @@ DOMAIN-SUFFIX,jianshu.io,Domestic
 DOMAIN-SUFFIX,jianshuapi.com,Domestic
 DOMAIN-SUFFIX,jiathis.com,Domestic
 DOMAIN-SUFFIX,jomodns.com,Domestic
+DOMAIN-SUFFIX,jsboxbbs.com,Domestic
 DOMAIN-SUFFIX,knewone.com,Domestic
 DOMAIN-SUFFIX,kuaidi100.com,Domestic
 DOMAIN-SUFFIX,lecloud.com,Domestic
@@ -6336,6 +6345,7 @@ DOMAIN-SUFFIX,ximalaya.com,Domestic
 DOMAIN-SUFFIX,xitek.com,Domestic
 DOMAIN-SUFFIX,xmcdn.com,Domestic
 DOMAIN-SUFFIX,xslb.net,Domestic
+DOMAIN-SUFFIX,xteko.com,Domestic
 DOMAIN-SUFFIX,xunlei.com,Domestic
 DOMAIN-SUFFIX,yach.me,Domestic
 DOMAIN-SUFFIX,yeepay.com,Domestic
