--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Apr 28, 2018 at 16:04
+# Apr 29, 2018 at 00:03
 
 [Rule]
 # Custom
@@ -5308,6 +5308,7 @@ PROCESS-NAME,Twitterrific,PROXY
 USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,PROXY
 USER-AGENT,*Telegram*,PROXY
 USER-AGENT,Argo*,Netflix & TVB
+USER-AGENT,AwemeI18n*,PROXY
 USER-AGENT,Coinbase*,PROXY
 USER-AGENT,com.google.ios.youtube*,YouTube
 USER-AGENT,Instagram*,PROXY
@@ -5398,6 +5399,7 @@ DOMAIN-SUFFIX,angularjs.org,PROXY
 DOMAIN-SUFFIX,anthonycalzadilla.com,PROXY
 DOMAIN-SUFFIX,aol.com,PROXY
 DOMAIN-SUFFIX,aolcdn.com,PROXY
+DOMAIN-SUFFIX,api.tiktokv.com,PROXY
 DOMAIN-SUFFIX,api.urbandictionary.com,PROXY
 DOMAIN-SUFFIX,apigee.com,PROXY
 DOMAIN-SUFFIX,apk-dl.com,PROXY
