--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# May 1, 2018 at 00:16
+# May 4, 2018 at 17:58
 
 [Rule]
 # Custom
@@ -3903,8 +3903,6 @@ DOMAIN-SUFFIX,npdaqy6x1j.me,REJECT
 DOMAIN-SUFFIX,nr1234.com,REJECT
 DOMAIN-SUFFIX,nsnmiaomu.cn,REJECT
 DOMAIN-SUFFIX,ntalker.com,REJECT
-DOMAIN-SUFFIX,ntdtv.com,REJECT
-DOMAIN-SUFFIX,ntdtv.org,REJECT
 DOMAIN-SUFFIX,nterbx.com,REJECT
 DOMAIN-SUFFIX,nthyn.com,REJECT
 DOMAIN-SUFFIX,nwwap.com,REJECT
@@ -5304,7 +5302,7 @@ PROCESS-NAME,Dropbox,PROXY
 PROCESS-NAME,node-webkit,PROXY
 PROCESS-NAME,Google Drive File Stream,PROXY
 PROCESS-NAME,Resilio Sync,PROXY
-PROCESS-NAME,Spotify,Spotify
+PROCESS-NAME,Spotify,Netflix & TVB & Spotify & YouTube
 PROCESS-NAME,Telegram,PROXY
 PROCESS-NAME,Tweetbot,PROXY
 PROCESS-NAME,Twitter,PROXY
@@ -5313,20 +5311,16 @@ PROCESS-NAME,Twitterrific,PROXY
 // UA
 USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,PROXY
 USER-AGENT,*Telegram*,PROXY
-USER-AGENT,Argo*,Netflix & TVB
+USER-AGENT,Argo*,Netflix & TVB & Spotify & YouTube
 USER-AGENT,AwemeI18n*,PROXY
 USER-AGENT,Coinbase*,PROXY
-USER-AGENT,com.google.ios.youtube*,YouTube
+USER-AGENT,com.google.ios.youtube*,Netflix & TVB & Spotify & YouTube
 USER-AGENT,Instagram*,PROXY
 USER-AGENT,Resilio Sync*,PROXY
 USER-AGENT,SoundCloud*,PROXY
 USER-AGENT,WeMusic*,PROXY
 USER-AGENT,WhatsApp*,PROXY
-USER-AGENT,YouTube*,YouTube
-
-// Area
-URL-REGEX,*\.jp,PROXY
-URL-REGEX,*\.tw,PROXY
+USER-AGENT,YouTube*,Netflix & TVB & Spotify & YouTube
 
 // BBC
 USER-AGENT,BBCiPlayer*,PROXY
@@ -5353,18 +5347,18 @@ DOMAIN-SUFFIX,line-scdn.net,PROXY
 DOMAIN-SUFFIX,nhncorp.jp,PROXY
 
 // MytvSUPER
-DOMAIN-KEYWORD,nowtv100,Netflix & TVB
-DOMAIN-KEYWORD,rthklive,Netflix & TVB
-DOMAIN-SUFFIX,mytvsuper.com,Netflix & TVB
-DOMAIN-SUFFIX,tvb.com,Netflix & TVB
+DOMAIN-KEYWORD,nowtv100,Netflix & TVB & Spotify & YouTube
+DOMAIN-KEYWORD,rthklive,Netflix & TVB & Spotify & YouTube
+DOMAIN-SUFFIX,mytvsuper.com,Netflix & TVB & Spotify & YouTube
+DOMAIN-SUFFIX,tvb.com,Netflix & TVB & Spotify & YouTube
 
 // Netflix
-DOMAIN-SUFFIX,netflix.com,Netflix & TVB
-DOMAIN-SUFFIX,netflix.net,Netflix & TVB
-DOMAIN-SUFFIX,nflxext.com,Netflix & TVB
-DOMAIN-SUFFIX,nflximg.com,Netflix & TVB
-DOMAIN-SUFFIX,nflximg.net,Netflix & TVB
-DOMAIN-SUFFIX,nflxvideo.net,Netflix & TVB
+DOMAIN-SUFFIX,netflix.com,Netflix & TVB & Spotify & YouTube
+DOMAIN-SUFFIX,netflix.net,Netflix & TVB & Spotify & YouTube
+DOMAIN-SUFFIX,nflxext.com,Netflix & TVB & Spotify & YouTube
+DOMAIN-SUFFIX,nflximg.com,Netflix & TVB & Spotify & YouTube
+DOMAIN-SUFFIX,nflximg.net,Netflix & TVB & Spotify & YouTube
+DOMAIN-SUFFIX,nflxvideo.net,Netflix & TVB & Spotify & YouTube
 
 // Steam
 DOMAIN-SUFFIX,fanatical.com, PROXY
@@ -5747,7 +5741,7 @@ DOMAIN-SUFFIX,sourceforge.net,PROXY
 DOMAIN-SUFFIX,sowers.org.hk,PROXY
 DOMAIN-SUFFIX,speedsmart.net,PROXY
 DOMAIN-SUFFIX,spike.com,PROXY
-DOMAIN-SUFFIX,spoti.fi,Spotify
+DOMAIN-SUFFIX,spoti.fi,Netflix & TVB & Spotify & YouTube
 DOMAIN-SUFFIX,squarespace.com,PROXY
 DOMAIN-SUFFIX,ssa.gov,PROXY
 DOMAIN-SUFFIX,sstatic.net,PROXY
@@ -5943,7 +5937,7 @@ DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
 DOMAIN-KEYWORD,dropbox,PROXY,force-remote-dns
 DOMAIN-KEYWORD,facebook,PROXY,force-remote-dns
 DOMAIN-KEYWORD,google,PROXY,force-remote-dns
-DOMAIN-KEYWORD,spotify,Spotify,force-remote-dns
+DOMAIN-KEYWORD,spotify,Netflix & TVB & Spotify & YouTube,force-remote-dns
 DOMAIN-KEYWORD,telegram,PROXY,force-remote-dns
 DOMAIN-KEYWORD,twitter,PROXY,force-remote-dns
 DOMAIN-KEYWORD,whatsapp,PROXY,force-remote-dns
@@ -5967,7 +5961,7 @@ DOMAIN-SUFFIX,fbcdn.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,fbsbx.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gcr.io,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gmail.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,googlevideo.com,YouTube,force-remote-dns
+DOMAIN-SUFFIX,googlevideo.com,Netflix & TVB & Spotify & YouTube,force-remote-dns
 DOMAIN-SUFFIX,gosetsuden.jp,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gvt1.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,gwtproject.org,PROXY,force-remote-dns
@@ -5998,7 +5992,7 @@ DOMAIN-SUFFIX,unfiltered.news,PROXY,force-remote-dns
 DOMAIN-SUFFIX,waveprotocol.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,webmproject.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,webrtc.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,youtube.com,YouTube,force-remote-dns
+DOMAIN-SUFFIX,youtube.com,Netflix & TVB & Spotify & YouTube,force-remote-dns
 
 // LINE
 IP-CIDR,103.2.28.0/22,PROXY,no-resolve
@@ -6156,6 +6150,7 @@ DOMAIN-SUFFIX,chunbo.com,Domestic
 DOMAIN-SUFFIX,chunboimg.com,Domestic
 DOMAIN-SUFFIX,clashroyaleapp.com,Domestic
 DOMAIN-SUFFIX,clouddn.com,Domestic
+DOMAIN-SUFFIX,cloudsigma.com,Domestic
 DOMAIN-SUFFIX,cloudxns.net,Domestic
 DOMAIN-SUFFIX,cmfu.com,Domestic
 DOMAIN-SUFFIX,cnbeta.com,Domestic
@@ -6239,6 +6234,7 @@ DOMAIN-SUFFIX,mxhichina.com,Domestic
 DOMAIN-SUFFIX,myqcloud.com,Domestic
 DOMAIN-SUFFIX,myunlu.com,Domestic
 DOMAIN-SUFFIX,netease.com,Domestic
+DOMAIN-SUFFIX,nfoservers.com,Domestic
 DOMAIN-SUFFIX,nssurge.com,Domestic
 DOMAIN-SUFFIX,nuomi.com,Domestic
 DOMAIN-SUFFIX,ourdvs.com,Domestic
@@ -6292,6 +6288,7 @@ DOMAIN-SUFFIX,teamviewer.com,Domestic
 DOMAIN-SUFFIX,tenpay.com,Domestic
 DOMAIN-SUFFIX,tietuku.com,Domestic
 DOMAIN-SUFFIX,tmall.com,Domestic
+DOMAIN-SUFFIX,tmzvps.com,Domestic
 DOMAIN-SUFFIX,trello.com,Domestic
 DOMAIN-SUFFIX,trellocdn.com,Domestic
 DOMAIN-SUFFIX,ttmeiju.com,Domestic
