--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# May 4, 2018 at 20:46
+# May 5, 2018 at 22:53
 
 [Rule]
 # Custom
@@ -6117,6 +6117,7 @@ DOMAIN-SUFFIX,360buy.com,Domestic
 DOMAIN-SUFFIX,360buyimg.com,Domestic
 DOMAIN-SUFFIX,36kr.com,Domestic
 DOMAIN-SUFFIX,58.com,Domestic
+DOMAIN-SUFFIX,8686c.com,Domestic
 DOMAIN-SUFFIX,abercrombie.com,Domestic
 DOMAIN-SUFFIX,acfun.tv,Domestic
 DOMAIN-SUFFIX,acgvideo.com,Domestic
