--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# May 5, 2018 at 22:53
+# May 6, 2018 at 13:21
 
 [Rule]
 # Custom
@@ -1067,7 +1067,6 @@ DOMAIN-SUFFIX,game.html5.qq.com,REJECT
 DOMAIN-SUFFIX,httpring.qq.com,REJECT
 DOMAIN-SUFFIX,if.mingxing.qq.com,REJECT
 DOMAIN-SUFFIX,img1.sj.qq.com,REJECT
-DOMAIN-SUFFIX,imtt.qq.com,REJECT
 DOMAIN-SUFFIX,ios.bugly.qq.com,REJECT
 DOMAIN-SUFFIX,isdspeed.qq.com,REJECT
 DOMAIN-SUFFIX,j.wit.qq.com,REJECT
@@ -5352,6 +5351,17 @@ DOMAIN-KEYWORD,rthklive,Netflix & TVB & Spotify & YouTube
 DOMAIN-SUFFIX,mytvsuper.com,Netflix & TVB & Spotify & YouTube
 DOMAIN-SUFFIX,tvb.com,Netflix & TVB & Spotify & YouTube
 
+// Microsoft
+DOMAIN-KEYWORD,microsoft,PROXY
+DOMAIN-SUFFIX,bing.com,PROXY
+DOMAIN-SUFFIX,hotmail.com,PROXY
+DOMAIN-SUFFIX,live.com,PROXY
+DOMAIN-SUFFIX,live.net,PROXY
+DOMAIN-SUFFIX,msn.com,PROXY
+DOMAIN-SUFFIX,office.com,PROXY
+DOMAIN-SUFFIX,office.net,PROXY
+DOMAIN-SUFFIX,outlook.com,PROXY
+
 // Netflix
 DOMAIN-SUFFIX,netflix.com,Netflix & TVB & Spotify & YouTube
 DOMAIN-SUFFIX,netflix.net,Netflix & TVB & Spotify & YouTube
@@ -6071,17 +6081,6 @@ USER-AGENT,wowcompanion*,Domestic
 DOMAIN-SUFFIX,battle.net,Domestic
 DOMAIN-SUFFIX,battlenet.com,Domestic
 DOMAIN-SUFFIX,blizzard.com,Domestic
-
-// Microsoft
-DOMAIN-KEYWORD,microsoft,Domestic
-DOMAIN-SUFFIX,bing.com,Domestic
-DOMAIN-SUFFIX,hotmail.com,Domestic
-DOMAIN-SUFFIX,live.com,Domestic
-DOMAIN-SUFFIX,live.net,Domestic
-DOMAIN-SUFFIX,msn.com,Domestic
-DOMAIN-SUFFIX,office.com,Domestic
-DOMAIN-SUFFIX,office.net,Domestic
-DOMAIN-SUFFIX,outlook.com,Domestic
 
 // Prior
 DOMAIN,client.amplifi.com,Domestic
