--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# May 6, 2018 at 20:30
+# May 6, 2018 at 22:13
 
 [Rule]
 # Custom
@@ -5351,6 +5351,10 @@ DOMAIN-SUFFIX,mytvsuper.com,Netflix & TVB & Spotify & YouTube
 DOMAIN-SUFFIX,tvb.com,Netflix & TVB & Spotify & YouTube
 
 // Microsoft
+USER-AGENT,MicroMessenger*,PROXY
+USER-AGENT,Microsoft*,PROXY
+USER-AGENT,OneDrive*,PROXY
+
 DOMAIN-KEYWORD,microsoft,PROXY
 DOMAIN-SUFFIX,bing.com,PROXY
 DOMAIN-SUFFIX,hotmail.com,PROXY
@@ -6064,10 +6068,7 @@ USER-AGENT,hide*,Domestic
 USER-AGENT,JDLife*,Domestic
 USER-AGENT,LastPass*,Domestic
 USER-AGENT,MegaWerewolf*,Domestic
-USER-AGENT,MicroMessenger*,Domestic
-USER-AGENT,Microsoft*,Domestic
 USER-AGENT,Moke*,Domestic
-USER-AGENT,OneDrive*,Domestic
 USER-AGENT,osee2unifiedRelease*,Domestic
 USER-AGENT,PayPal*,Domestic
 USER-AGENT,QQ*,Domestic
@@ -6244,7 +6245,6 @@ DOMAIN-SUFFIX,nfoservers.com,Domestic
 DOMAIN-SUFFIX,nssurge.com,Domestic
 DOMAIN-SUFFIX,nuomi.com,Domestic
 DOMAIN-SUFFIX,ourdvs.com,Domestic
-DOMAIN-SUFFIX,outlook.com,Domestic
 DOMAIN-SUFFIX,overcast.fm,Domestic
 DOMAIN-SUFFIX,paypal.com,Domestic
 DOMAIN-SUFFIX,paypalobjects.com,Domestic
