--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# May 6, 2018 at 22:13
+# May 7, 2018 at 09:35
 
 [Rule]
 # Custom
@@ -592,6 +592,7 @@ DOMAIN-SUFFIX,entry.baidu.com,REJECT
 DOMAIN-SUFFIX,ers.baidu.com,REJECT
 DOMAIN-SUFFIX,f10.baidu.com,REJECT
 DOMAIN-SUFFIX,fclick.baidu.com,REJECT
+DOMAIN-SUFFIX,fc-feed.cdn.bcebos.com,REJECT
 DOMAIN-SUFFIX,fexclick.baidu.com,REJECT
 DOMAIN-SUFFIX,g.baidu.com,REJECT
 DOMAIN-SUFFIX,gimg.baidu.com,REJECT
@@ -5351,8 +5352,6 @@ DOMAIN-SUFFIX,mytvsuper.com,Netflix & TVB & Spotify & YouTube
 DOMAIN-SUFFIX,tvb.com,Netflix & TVB & Spotify & YouTube
 
 // Microsoft
-USER-AGENT,MicroMessenger*,PROXY
-USER-AGENT,Microsoft*,PROXY
 USER-AGENT,OneDrive*,PROXY
 
 DOMAIN-KEYWORD,microsoft,PROXY
@@ -6068,6 +6067,8 @@ USER-AGENT,hide*,Domestic
 USER-AGENT,JDLife*,Domestic
 USER-AGENT,LastPass*,Domestic
 USER-AGENT,MegaWerewolf*,Domestic
+USER-AGENT,MicroMessenger*,Domestic
+USER-AGENT,Microsoft*,Domestic
 USER-AGENT,Moke*,Domestic
 USER-AGENT,osee2unifiedRelease*,Domestic
 USER-AGENT,PayPal*,Domestic
