--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# May 7, 2018 at 09:35
+# May 7, 2018 at 10:37
 
 [Rule]
 # Custom
@@ -1336,6 +1336,8 @@ DOMAIN-SUFFIX,sys.zhangyue.com,REJECT
 
 // Zhihu
 DOMAIN-SUFFIX,sugar.zhihu.com,REJECT
+
+URL-REGEX,^https?://pic\d\.zhimg\.com\/v2,REJECT
 
 // AD Block
 DOMAIN-KEYWORD,admarvel,REJECT
