--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# May 7, 2018 at 18:55
+# May 8, 2018 at 20:41
 
 [Rule]
 # Custom
@@ -621,7 +621,6 @@ DOMAIN-SUFFIX,pc.videoclick.baidu.com,REJECT
 DOMAIN-SUFFIX,pos.baidu.com,REJECT
 DOMAIN-SUFFIX,push.zhanzhang.baidu.com,REJECT
 DOMAIN-SUFFIX,qianclick.baidu.com,REJECT
-DOMAIN-SUFFIX,r6.mo.baidu.com,REJECT
 DOMAIN-SUFFIX,release.baidu.com,REJECT
 DOMAIN-SUFFIX,rigel.baidustatic.com,REJECT
 DOMAIN-SUFFIX,river.zhidao.baidu.com,REJECT
@@ -711,6 +710,8 @@ DOMAIN-SUFFIX,xpe.cxaerp.com,REJECT
 DOMAIN-SUFFIX,xtzxmy.com,REJECT
 DOMAIN-SUFFIX,xyrkl.com,REJECT
 DOMAIN-SUFFIX,zhuanfakong.com,REJECT
+
+URL-REGEX,^https?://(e|m).+/((uu|oo)\.php.+|\d.+\.x?html\?),REJECT
 
 // Caiyun
 DOMAIN-SUFFIX,ad.caiyunapp.com,REJECT
