--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# May 8, 2018 at 20:41
+# May 15, 2018 at 22:32
 
 [Rule]
 # Custom
@@ -711,7 +711,7 @@ DOMAIN-SUFFIX,xtzxmy.com,REJECT
 DOMAIN-SUFFIX,xyrkl.com,REJECT
 DOMAIN-SUFFIX,zhuanfakong.com,REJECT
 
-URL-REGEX,^https?://(e|m).+/((uu|oo)\.php.+|\d.+\.x?html\?),REJECT
+URL-REGEX,^https?://(e|m)\..+/((uu|oo)\.php.+|\d+\.x?html\?$),REJECT
 
 // Caiyun
 DOMAIN-SUFFIX,ad.caiyunapp.com,REJECT
@@ -1059,6 +1059,7 @@ DOMAIN-SUFFIX,download.sj.qq.com,REJECT
 DOMAIN-SUFFIX,dp3.qq.com,REJECT
 DOMAIN-SUFFIX,e.qq.com,REJECT
 DOMAIN-SUFFIX,etg.qq.com,REJECT
+DOMAIN-SUFFIX,fiction.b0.upaiyun.com,REJECT
 DOMAIN-SUFFIX,fm.qzone.qq.com,REJECT
 DOMAIN-SUFFIX,fodder.qq.com,REJECT
 DOMAIN-SUFFIX,fodder.tc.qq.com,REJECT
@@ -1079,6 +1080,7 @@ DOMAIN-SUFFIX,log.tbs.qq.com,REJECT
 DOMAIN-SUFFIX,mapp.qzone.qq.com,REJECT
 DOMAIN-SUFFIX,mcgi.v.qq.com,REJECT
 DOMAIN-SUFFIX,mdevstat.qqlive.qq.com,REJECT
+DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,mini2015.qq.com,REJECT
 DOMAIN-SUFFIX,monitor.uu.qq.com,REJECT
 DOMAIN-SUFFIX,mqqad.cs0309.html5.qq.com,REJECT
@@ -1214,9 +1216,10 @@ DOMAIN-SUFFIX,vs2.gzcu.u3.ucweb.com,REJECT
 DOMAIN-SUFFIX,wap3.ucweb.com,REJECT
 DOMAIN-SUFFIX,woodpecker.uc.cn,REJECT
 
-// Weifeng
+// Feng
 DOMAIN-SUFFIX,aoodoo.feng.com,REJECT
 DOMAIN-SUFFIX,fengbuy.com,REJECT
+DOMAIN-SUFFIX,push.feng.com,REJECT
 DOMAIN-SUFFIX,we.tm,REJECT
 
 // Wi-Fi key
@@ -1460,6 +1463,7 @@ DOMAIN-SUFFIX,18tzx.com,REJECT
 DOMAIN-SUFFIX,1d1px.net,REJECT
 DOMAIN-SUFFIX,1i580.com,REJECT
 DOMAIN-SUFFIX,1kmb.cn,REJECT
+DOMAIN-SUFFIX,1kxun.mobi,REJECT
 DOMAIN-SUFFIX,1kzh.com,REJECT
 DOMAIN-SUFFIX,1l1.cc,REJECT
 DOMAIN-SUFFIX,1lib.cn,REJECT
@@ -4299,6 +4303,7 @@ DOMAIN-SUFFIX,scdng.com,REJECT
 DOMAIN-SUFFIX,schemas.android.com,REJECT
 DOMAIN-SUFFIX,sciencelolb.com,REJECT
 DOMAIN-SUFFIX,sclizhong.com,REJECT
+DOMAIN-SUFFIX,scontent.xx.fbcdn.net,REJECT
 DOMAIN-SUFFIX,scorecardresearch.com,REJECT
 DOMAIN-SUFFIX,scrippsnetworks.com,REJECT
 DOMAIN-SUFFIX,script.vccoo.com,REJECT
@@ -4883,7 +4888,6 @@ DOMAIN-SUFFIX,x.castanet.net,REJECT
 DOMAIN-SUFFIX,x.cnxad.com,REJECT
 DOMAIN-SUFFIX,x.eroticity.net,REJECT
 DOMAIN-SUFFIX,x.heyzap.com,REJECT
-DOMAIN-SUFFIX,x.jd.com,REJECT
 DOMAIN-SUFFIX,x.ligatus.com,REJECT
 DOMAIN-SUFFIX,x.vipergirls.to,REJECT
 DOMAIN-SUFFIX,x9377a.com,REJECT
@@ -5300,14 +5304,15 @@ IP-CIDR6,2001:b28:f23f::/48,REJECT,no-resolve
 PROCESS-NAME,Backup and Sync,PROXY
 PROCESS-NAME,Day One,PROXY
 PROCESS-NAME,Dropbox,PROXY
-PROCESS-NAME,node-webkit,PROXY
 PROCESS-NAME,Google Drive File Stream,PROXY
+PROCESS-NAME,node-webkit,PROXY
 PROCESS-NAME,Resilio Sync,PROXY
 PROCESS-NAME,Spotify,Netflix & TVB & Spotify & YouTube
 PROCESS-NAME,Telegram,PROXY
 PROCESS-NAME,Tweetbot,PROXY
 PROCESS-NAME,Twitter,PROXY
 PROCESS-NAME,Twitterrific,PROXY
+PROCESS-NAME,viu,PROXY
 
 // UA
 USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,PROXY
@@ -5319,6 +5324,7 @@ USER-AGENT,com.google.ios.youtube*,Netflix & TVB & Spotify & YouTube
 USER-AGENT,Instagram*,PROXY
 USER-AGENT,Resilio Sync*,PROXY
 USER-AGENT,SoundCloud*,PROXY
+USER-AGENT,viu*,PROXY
 USER-AGENT,WeMusic*,PROXY
 USER-AGENT,WhatsApp*,PROXY
 USER-AGENT,YouTube*,Netflix & TVB & Spotify & YouTube
@@ -5476,6 +5482,7 @@ DOMAIN-SUFFIX,chromium.org,PROXY
 DOMAIN-SUFFIX,cl.ly,PROXY
 DOMAIN-SUFFIX,cloudflare.com,PROXY
 DOMAIN-SUFFIX,cloudfront.net,PROXY
+DOMAIN-SUFFIX,cloudfront.net,PROXY
 DOMAIN-SUFFIX,cloudgarage.jp,PROXY
 DOMAIN-SUFFIX,cloudmagic.com,PROXY
 DOMAIN-SUFFIX,cmail19.com,PROXY
@@ -5503,6 +5510,7 @@ DOMAIN-SUFFIX,disconnect.me,PROXY
 DOMAIN-SUFFIX,disq.us,PROXY
 DOMAIN-SUFFIX,disqus.com,PROXY
 DOMAIN-SUFFIX,disquscdn.com,PROXY
+DOMAIN-SUFFIX,dmm.co.jp,PROXY
 DOMAIN-SUFFIX,dnsimple.com,PROXY
 DOMAIN-SUFFIX,docker.com,PROXY
 DOMAIN-SUFFIX,dribbble.com,PROXY
@@ -5573,8 +5581,10 @@ DOMAIN-SUFFIX,goodreads.com,PROXY
 DOMAIN-SUFFIX,gravatar.com,PROXY
 DOMAIN-SUFFIX,gstatic.cn,PROXY
 DOMAIN-SUFFIX,gstatic.com,PROXY
+DOMAIN-SUFFIX,gstatic.com,PROXY
 DOMAIN-SUFFIX,gunsamerica.com,PROXY
 DOMAIN-SUFFIX,gvt0.com,PROXY
+DOMAIN-SUFFIX,gvt1.com,PROXY
 DOMAIN-SUFFIX,helpshift.com,PROXY
 DOMAIN-SUFFIX,hinet.net,PROXY
 DOMAIN-SUFFIX,hockeyapp.net,PROXY
@@ -5876,6 +5886,7 @@ DOMAIN-SUFFIX,vimeocdn.com,PROXY
 DOMAIN-SUFFIX,vimperator.org,PROXY
 DOMAIN-SUFFIX,vine.co,PROXY
 DOMAIN-SUFFIX,visibletweets.com,PROXY
+DOMAIN-SUFFIX,viu.com,PROXY
 DOMAIN-SUFFIX,vivaldi.com,PROXY
 DOMAIN-SUFFIX,voachinese.com,PROXY
 DOMAIN-SUFFIX,vocativ.com,PROXY
@@ -6318,6 +6329,7 @@ DOMAIN-SUFFIX,weibo.com,Domestic
 DOMAIN-SUFFIX,weico.cc,Domestic
 DOMAIN-SUFFIX,weiphone.com,Domestic
 DOMAIN-SUFFIX,weiphone.net,Domestic
+DOMAIN-SUFFIX,werewolf.53site.com,Domestic
 DOMAIN-SUFFIX,windowsupdate.com,Domestic
 DOMAIN-SUFFIX,workflowy.com,Domestic
 DOMAIN-SUFFIX,xdrig.com,Domestic
