--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# May 18, 2018 at 11:40
+# May 20, 2018 at 09:51
 
 [Rule]
 # Custom
@@ -5825,6 +5825,7 @@ DOMAIN-SUFFIX,torrentprivacy.com,PROXY
 DOMAIN-SUFFIX,torrentproject.se,PROXY
 DOMAIN-SUFFIX,torrentz.eu,PROXY
 DOMAIN-SUFFIX,traffichaus.com,PROXY
+DOMAIN-SUFFIX,trakt.tv,PROXY
 DOMAIN-SUFFIX,transparency.org,PROXY
 DOMAIN-SUFFIX,trello.com,PROXY
 DOMAIN-SUFFIX,trendsmap.com,PROXY
@@ -5933,7 +5934,6 @@ DOMAIN-SUFFIX,xclient.info,PROXY
 DOMAIN-SUFFIX,xda-developers.com,PROXY
 DOMAIN-SUFFIX,xeeno.com,PROXY
 DOMAIN-SUFFIX,xiti.com,PROXY
-DOMAIN-SUFFIX,xn--h5qz41fzgdxxl.com,PROXY
 DOMAIN-SUFFIX,xuite.net,PROXY
 DOMAIN-SUFFIX,xvideos.com,PROXY
 DOMAIN-SUFFIX,yahoo.com,PROXY
@@ -6321,7 +6321,6 @@ DOMAIN-SUFFIX,upyun.com,Domestic
 DOMAIN-SUFFIX,uxengine.net,Domestic
 DOMAIN-SUFFIX,v2ex.co,Domestic
 DOMAIN-SUFFIX,v2ex.com,Domestic
-DOMAIN-SUFFIX,vultr.com,Domestic
 DOMAIN-SUFFIX,wandoujia.com,Domestic
 DOMAIN-SUFFIX,weather.bjango.com,Domestic
 DOMAIN-SUFFIX,weather.com,Domestic
@@ -6992,6 +6991,9 @@ www.gmail.com = 216.58.203.184
 // Fenqile
 ^https?://fm.fenqile.com/routev2/other/getfloatAd.json - reject
 ^https?://fm.fenqile.com/routev2/other/startImg.json - reject
+
+// VIP
+^https?://mapi.appvipshop.com/vips-mobile/router.do\?api_key= - reject
 
 
 // Other
