--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# May 23, 2018 at 00:46
+# May 25, 2018 at 11:01
 
 [Rule]
 # Custom
@@ -1572,6 +1572,7 @@ DOMAIN-SUFFIX,5jcom.com.cn,REJECT
 DOMAIN-SUFFIX,5vz3cfs0yd.me,REJECT
 DOMAIN-SUFFIX,5y9nfpes.52pk.com,REJECT
 DOMAIN-SUFFIX,600ad.com,REJECT
+DOMAIN-SUFFIX,60608787.com,REJECT
 DOMAIN-SUFFIX,626uc.com,REJECT
 DOMAIN-SUFFIX,644446.com,REJECT
 DOMAIN-SUFFIX,654mmm.com,REJECT
@@ -3410,6 +3411,7 @@ DOMAIN-SUFFIX,jhzl001.com,REJECT
 DOMAIN-SUFFIX,jiaheyonggu.com,REJECT
 DOMAIN-SUFFIX,jiajv.net,REJECT
 DOMAIN-SUFFIX,jianbaimei.com,REJECT
+DOMAIN-SUFFIX,jianduankm.com,REJECT
 DOMAIN-SUFFIX,jianmei123.com,REJECT
 DOMAIN-SUFFIX,jiaoben.eastday.com,REJECT
 DOMAIN-SUFFIX,jiaoben.ganji.cn,REJECT
@@ -5715,6 +5717,7 @@ DOMAIN-SUFFIX,playstationnetwork.com,PROXY
 DOMAIN-SUFFIX,pokemon.com,PROXY
 DOMAIN-SUFFIX,polymer-project.org,PROXY
 DOMAIN-SUFFIX,popo.tw,PROXY
+DOMAIN-SUFFIX,potato.im,PROXY
 DOMAIN-SUFFIX,prfct.co,PROXY
 DOMAIN-SUFFIX,proxfree.com,PROXY
 DOMAIN-SUFFIX,psiphon3.com,PROXY
@@ -6055,6 +6058,12 @@ IP-CIDR,103.27.148.0/22,PROXY,no-resolve
 IP-CIDR,110.76.140.0/22,PROXY,no-resolve
 IP-CIDR,113.61.104.0/22,PROXY,no-resolve
 IP-CIDR,27.0.236.0/22,PROXY,no-resolve
+
+// Potato Chat
+IP-CIDR,13.251.24.157/24,PROXY,no-resolve
+IP-CIDR,13.251.41.203/24,PROXY,no-resolve
+IP-CIDR,17.252.156.147/24,PROXY,no-resolve
+IP-CIDR,17.252.157.26/24,PROXY,no-resolve
 
 
 
@@ -6998,7 +7007,9 @@ www.gmail.com = 216.58.203.184
 
 // RRYS
 ^https?://ctrl.zmzapi.net/app/ads - reject
-^https?://ctrl.zmzapi.net/app/init - reject
+
+// Shunfeng fengchao
+^https?://consumer.fcbox.com/v1/ad/OpeningAdInfo/ - reject
 
 
 // Other
