--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# May 26, 2018 at 17:42
+# May 27, 2018 at 00:34
 
 [Rule]
 # Custom
@@ -5608,6 +5608,7 @@ DOMAIN-SUFFIX,insder.co,PROXY
 DOMAIN-SUFFIX,instapaper.com,PROXY
 DOMAIN-SUFFIX,instructables.com,PROXY
 DOMAIN-SUFFIX,io.io,PROXY
+DOMAIN-SUFFIX,ip.sb,PROXY
 DOMAIN-SUFFIX,ipaddress.com,PROXY
 DOMAIN-SUFFIX,ipn.li,PROXY
 DOMAIN-SUFFIX,is.gd,PROXY
@@ -6300,6 +6301,7 @@ DOMAIN-SUFFIX,sf-express.com,Domestic
 DOMAIN-SUFFIX,sinaapp.com,Domestic
 DOMAIN-SUFFIX,sinaimg.cn,Domestic
 DOMAIN-SUFFIX,sinaimg.com,Domestic
+DOMAIN-SUFFIX,sm.ms,Domestic
 DOMAIN-SUFFIX,smzdm.com,Domestic
 DOMAIN-SUFFIX,snwx.com,Domestic
 DOMAIN-SUFFIX,so.com,Domestic
