--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# May 27, 2018 at 00:34
+# Jun 2, 2018 at 12:42
 
 [Rule]
 # Custom
@@ -284,6 +284,7 @@ DOMAIN-SUFFIX,haitaoad.nosdn.127.net,REJECT
 DOMAIN-SUFFIX,i.clkservice.youdao.com,REJECT
 DOMAIN-SUFFIX,iad.g.163.com,REJECT
 DOMAIN-SUFFIX,iadmat.nosdn.127.net,REJECT
+DOMAIN-SUFFIX,iadmatvideo.nosdn.127.net,REJECT
 DOMAIN-SUFFIX,img1.126.net,REJECT
 DOMAIN-SUFFIX,img2.126.net,REJECT
 DOMAIN-SUFFIX,impservice.chnl.youdao.com,REJECT
@@ -997,7 +998,6 @@ DOMAIN-SUFFIX,get.sogou.com,REJECT
 DOMAIN-SUFFIX,goto.sogou.com,REJECT
 DOMAIN-SUFFIX,ht.www.sogou.com,REJECT
 DOMAIN-SUFFIX,image.p4p.sogou.com,REJECT
-DOMAIN-SUFFIX,img.shouji.sogou.com,REJECT
 DOMAIN-SUFFIX,info.pinyin.sogou.com,REJECT
 DOMAIN-SUFFIX,input.shouji.sogou.com,REJECT
 DOMAIN-SUFFIX,iwan.sogou.com,REJECT
@@ -5410,7 +5410,6 @@ DOMAIN-SUFFIX,alfredapp.com,PROXY
 DOMAIN-SUFFIX,allconnected.co,PROXY
 DOMAIN-SUFFIX,amazon.com,PROXY
 DOMAIN-SUFFIX,amazonaws.com,PROXY
-DOMAIN-SUFFIX,amplitude.com,PROXY
 DOMAIN-SUFFIX,ampproject.com,PROXY
 DOMAIN-SUFFIX,ampproject.net,PROXY
 DOMAIN-SUFFIX,ampproject.org,PROXY
@@ -5759,7 +5758,6 @@ DOMAIN-SUFFIX,slack-edge.com,PROXY
 DOMAIN-SUFFIX,slack-msgs.com,PROXY
 DOMAIN-SUFFIX,slideshare.net,PROXY
 DOMAIN-SUFFIX,smartdnsproxy.com,PROXY
-DOMAIN-SUFFIX,smartmailcloud.com,PROXY
 DOMAIN-SUFFIX,smh.com.au,PROXY
 DOMAIN-SUFFIX,snapchat.com,PROXY
 DOMAIN-SUFFIX,sndcdn.com,PROXY
@@ -6119,10 +6117,10 @@ DOMAIN-SUFFIX,alphassl.com,Domestic
 DOMAIN-SUFFIX,edu.cn,Domestic
 
 // Spark
-DOMAIN,api.amplitude.com,Domestic
-DOMAIN,app.smartmailcloud.com,Domestic
-DOMAIN,gate.hockeyapp.net,Domestic
+DOMAIN-SUFFIX,amplitude.com,Domestic
 DOMAIN-SUFFIX,firebaseio.com,Domestic
+DOMAIN-SUFFIX,gate.hockeyapp.net,Domestic
+DOMAIN-SUFFIX,smartmailcloud.com,Domestic
 
 // TeamViewer
 IP-CIDR,109.239.140.0/24,Domestic,no-resolve
@@ -6782,8 +6780,14 @@ www.gmail.com = 216.58.203.184
 ^https?://api.laifeng.com/v1/start/ads - reject
 
 // Douyin
-^https?://aweme.snssdk.com/api/ad/ - reject
 ^https?://.+.pstatp.com/img/ad - reject
+^https?://aweme.snssdk.com/api/ad/ - reject 
+^https?://aweme.snssdk.com/aweme/v1/aweme/stats/ - reject 
+^https?://aweme.snssdk.com/aweme/v1/device/update/ - reject 
+^https?://aweme.snssdk.com/aweme/v1/screen/ad/ - reject 
+^https?://aweme.snssdk.com/service/1/app_logout/ - reject 
+^https?://aweme.snssdk.com/service/2/app_log - reject 
+^https?://frontier.snssdk.com/ - reject 
 
 // Xiachufang
 ^https?://api.xiachufang.com/v2/ad/ - reject
