--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Jun 2, 2018 at 12:42
+# Jun 6, 2018 at 23:40
 
 [Rule]
 # Custom
@@ -5937,6 +5937,7 @@ DOMAIN-SUFFIX,xclient.info,PROXY
 DOMAIN-SUFFIX,xda-developers.com,PROXY
 DOMAIN-SUFFIX,xeeno.com,PROXY
 DOMAIN-SUFFIX,xiti.com,PROXY
+DOMAIN-SUFFIX,xn--nos809b.com,PROXY
 DOMAIN-SUFFIX,xuite.net,PROXY
 DOMAIN-SUFFIX,xvideos.com,PROXY
 DOMAIN-SUFFIX,yahoo.com,PROXY
