--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Jun 9, 2018 at 16:52
+# Jun 9, 2018 at 21:55
 
 [Rule]
 # Custom
@@ -5382,6 +5382,9 @@ DOMAIN-SUFFIX,nflximg.com,Netflix & TVB & Spotify & YouTube
 DOMAIN-SUFFIX,nflximg.net,Netflix & TVB & Spotify & YouTube
 DOMAIN-SUFFIX,nflxvideo.net,Netflix & TVB & Spotify & YouTube
 
+// Spark
+DOMAIN-SUFFIX,smartmailcloud.com,PROXY
+
 // Steam
 DOMAIN-SUFFIX,fanatical.com, PROXY
 DOMAIN-SUFFIX,humblebundle.com,PROXY
@@ -6120,7 +6123,6 @@ DOMAIN-SUFFIX,edu.cn,Domestic
 DOMAIN-SUFFIX,amplitude.com,Domestic
 DOMAIN-SUFFIX,firebaseio.com,Domestic
 DOMAIN-SUFFIX,gate.hockeyapp.net,Domestic
-DOMAIN-SUFFIX,smartmailcloud.com,Domestic
 
 // TeamViewer
 IP-CIDR,109.239.140.0/24,Domestic,no-resolve
