--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Jun 13, 2018 at 10:37
+# Jun 13, 2018 at 23:38
 
 [Rule]
 # Custom
@@ -6072,6 +6072,7 @@ IP-CIDR,17.252.157.26/24,PROXY,no-resolve
 
 // Client
 PROCESS-NAME,Paws for Trello,Domestic
+PROCESS-NAME,ss-local,Domestic
 PROCESS-NAME,Thunder,Domestic
 PROCESS-NAME,TeamViewer,Domestic
 PROCESS-NAME,trustd,Domestic
