--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Jun 13, 2018 at 23:38
+# Jun 26, 2018 at 19:02
 
 [Rule]
 # Custom
@@ -6086,6 +6086,7 @@ USER-AGENT,*Vainglory* ,Domestic
 USER-AGENT,AdBlock*,Domestic
 USER-AGENT,arrowio*,Domestic
 USER-AGENT,balls*,Domestic
+USER-AGENT,Beplay*,Domestic
 USER-AGENT,Best%20Trace*,Domestic
 USER-AGENT,cmblife*,Domestic
 USER-AGENT,eusoft_ting_en_iphone,Domestic
@@ -6169,6 +6170,8 @@ DOMAIN-SUFFIX,autonavi.com,Domestic
 DOMAIN-SUFFIX,bababian.com,Domestic
 DOMAIN-SUFFIX,baidu.com,Domestic
 DOMAIN-SUFFIX,battle.net,Domestic
+DOMAIN-SUFFIX,beplay.email,Domestic
+DOMAIN-SUFFIX,bet365.com,Domestic
 DOMAIN-SUFFIX,bdimg.com,Domestic
 DOMAIN-SUFFIX,bdstatic.com,Domestic
 DOMAIN-SUFFIX,beatsbydre.com,Domestic
