--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Jun 26, 2018 at 19:02
+# Jun 29, 2018 at 00:30
 
 [Rule]
 # Custom
@@ -49,9 +49,6 @@ IP-CIDR,17.0.0.0/8,Apple,no-resolve
 
 
 # Ads in Video apps
-
-// Douyin
-DOMAIN-SUFFIX,log.snssdk.com,REJECT
 
 // iqiyi
 DOMAIN-SUFFIX,a.ckm.iqiyi.com,REJECT
@@ -6107,6 +6104,9 @@ USER-AGENT,ting_en,Domestic
 USER-AGENT,WebTorrent*,Domestic
 USER-AGENT,WeChat*,Domestic
 
+// Beplay
+DOMAIN-KEYWORD,beplay,Domestic
+
 // Blizzard
 USER-AGENT,Blizzard*,Domestic
 USER-AGENT,wowcompanion*,Domestic
@@ -6170,7 +6170,6 @@ DOMAIN-SUFFIX,autonavi.com,Domestic
 DOMAIN-SUFFIX,bababian.com,Domestic
 DOMAIN-SUFFIX,baidu.com,Domestic
 DOMAIN-SUFFIX,battle.net,Domestic
-DOMAIN-SUFFIX,beplay.email,Domestic
 DOMAIN-SUFFIX,bet365.com,Domestic
 DOMAIN-SUFFIX,bdimg.com,Domestic
 DOMAIN-SUFFIX,bdstatic.com,Domestic
