--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Jul 5, 2018 at 18:24
+# Jul 6, 2018 at 15:28
 
 [Rule]
 # Custom
@@ -6779,6 +6779,7 @@ www.gmail.com = 216.58.203.184
 ^https?://mapi.dangdang.com/index.php\?action=init&user_client=iphone - reject
 
 // Guotai
+^https?://dl.app.gtja.com/dzswem/kvController/ - reject
 ^https?://dl.app.gtja.com/operation/config/startupConfig.json - reject
 
 // Laifeng Live
@@ -6951,7 +6952,8 @@ www.gmail.com = 216.58.203.184
 ^https?://e.dangdang.com/media/api.+\?action=getDeviceStartPage - reject
 
 // Smzdm
-^https?://api.smzdm.com/v1/util/loading\?f=iphone&pic_size=1080_1920 - reject
+^https?://api.smzdm.com/v1/util/loading\?f=iphone&pic_size=\d{3,4}_\d{4} - reject
+^https?://api.smzdm.com/v2/util/banner\?f=iphone&sign - reject
 
 // Feichangzhun
 ^https?://app.veryzhun.com/ad/admob - reject
