--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Jul 20, 2018 at 16:09
+# Jul 23, 2018 at 18:49
 
 [Rule]
 # Custom
@@ -6159,6 +6159,8 @@ DOMAIN-SUFFIX,air-matters.com,Domestic
 DOMAIN-SUFFIX,air-matters.io,Domestic
 DOMAIN-SUFFIX,aixifan.com,Domestic
 DOMAIN-SUFFIX,akadns.net,Domestic
+DOMAIN-SUFFIX,alibaba.com,Domestic
+DOMAIN-SUFFIX,alibabacloud.com,Domestic
 DOMAIN-SUFFIX,alicdn.com,Domestic
 DOMAIN-SUFFIX,alipay.com,Domestic
 DOMAIN-SUFFIX,alipayobjects.com,Domestic
@@ -6276,6 +6278,7 @@ DOMAIN-SUFFIX,netease.com,Domestic
 DOMAIN-SUFFIX,nfoservers.com,Domestic
 DOMAIN-SUFFIX,nssurge.com,Domestic
 DOMAIN-SUFFIX,nuomi.com,Domestic
+DOMAIN-SUFFIX,onevps.com,Domestic
 DOMAIN-SUFFIX,ourdvs.com,Domestic
 DOMAIN-SUFFIX,overcast.fm,Domestic
 DOMAIN-SUFFIX,paypal.com,Domestic
