--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Jul 24, 2018 at 00:06
+# Jul 27, 2018 at 12:59
 
 [Rule]
 # Custom
@@ -69,6 +69,7 @@ DOMAIN-SUFFIX,msga.cupid.iqiyi.com,REJECT
 DOMAIN-SUFFIX,policy.video.iqiyi.com,REJECT
 DOMAIN-SUFFIX,yuedu.iqiyi.com,REJECT
 URL-REGEX,^https?://.+/videos/other/.+,REJECT
+IP-CIDR,101.227.200.0/24,REJECT,no-resolve
 
 // Hunan TV
 DOMAIN-SUFFIX,click.hunantv.com,REJECT
@@ -5400,6 +5401,8 @@ DOMAIN-SUFFIX,adobe.com,PROXY
 DOMAIN-SUFFIX,adobedtm.com,PROXY
 DOMAIN-SUFFIX,aerisapi.com,PROXY
 DOMAIN-SUFFIX,akamaihd.net,PROXY
+DOMAIN-SUFFIX,alibaba.com,PROXY
+DOMAIN-SUFFIX,alibabacloud.com,PROXY
 DOMAIN-SUFFIX,alfredapp.com,PROXY
 DOMAIN-SUFFIX,allconnected.co,PROXY
 DOMAIN-SUFFIX,amazon.com,PROXY
@@ -5858,6 +5861,7 @@ DOMAIN-SUFFIX,ulyssesapp.com,PROXY
 DOMAIN-SUFFIX,unblockdmm.com,PROXY
 DOMAIN-SUFFIX,unblocksites.co,PROXY
 DOMAIN-SUFFIX,unpo.org,PROXY
+DOMAIN-SUFFIX,unsplash.com,PROXY
 DOMAIN-SUFFIX,untraceable.us,PROXY
 DOMAIN-SUFFIX,uploaded.net,PROXY
 DOMAIN-SUFFIX,uProxy.org,PROXY
@@ -6158,8 +6162,6 @@ DOMAIN-SUFFIX,air-matters.com,Domestic
 DOMAIN-SUFFIX,air-matters.io,Domestic
 DOMAIN-SUFFIX,aixifan.com,Domestic
 DOMAIN-SUFFIX,akadns.net,Domestic
-DOMAIN-SUFFIX,alibaba.com,Domestic
-DOMAIN-SUFFIX,alibabacloud.com,Domestic
 DOMAIN-SUFFIX,alicdn.com,Domestic
 DOMAIN-SUFFIX,alipay.com,Domestic
 DOMAIN-SUFFIX,alipayobjects.com,Domestic
