--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Aug 3, 2018 at 14:07
+# Aug 6, 2018 at 13:41
 
 [Rule]
 # Custom
@@ -6169,6 +6169,7 @@ DOMAIN-SUFFIX,amap.com,Domestic
 DOMAIN-SUFFIX,aweme.snssdk.com,Domestic
 DOMAIN-SUFFIX,apache.org,Domestic
 DOMAIN-SUFFIX,api.crisp.chat,Domestic
+DOMAIN-SUFFIX,api.termius.com,Domestic
 DOMAIN-SUFFIX,appshike.com,Domestic
 DOMAIN-SUFFIX,appstore.com,Domestic
 DOMAIN-SUFFIX,autonavi.com,Domestic
