--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Aug 6, 2018 at 13:41
+# Aug 6, 2018 at 13:47
 
 [Rule]
 # Custom
@@ -6271,6 +6271,7 @@ DOMAIN-SUFFIX,miwifi.com,Domestic
 DOMAIN-SUFFIX,mob.com,Domestic
 DOMAIN-SUFFIX,moji.com,Domestic
 DOMAIN-SUFFIX,moke.com,Domestic
+DOMAIN-SUFFIX,mtalk.google.com,Domestic
 DOMAIN-SUFFIX,mxhichina.com,Domestic
 DOMAIN-SUFFIX,myqcloud.com,Domestic
 DOMAIN-SUFFIX,myunlu.com,Domestic
