--- a/Rule.conf
+++ b/Rule.conf
@@ -1,8 +1,7 @@
-# Aug 6, 2018 at 15:22
+# Aug 15, 2018 at 12:36
 
 [Rule]
 # Custom
-
 
 
 
@@ -45,9 +44,6 @@ DOMAIN-SUFFIX,mzstatic.com,Apple // App Store & iTunes Images
 DOMAIN-SUFFIX,push-apple.com.akadns.net,Apple
 
 IP-CIDR,17.0.0.0/8,Apple,no-resolve
-
-
-
 # Ads in Video apps
 
 // iqiyi
@@ -5204,9 +5200,6 @@ IP-CIDR,78.140.131.214/32,REJECT,no-resolve
 IP-CIDR6,2001:67c:4e8::/48,REJECT,no-resolve
 IP-CIDR6,2001:b28:f23d::/48,REJECT,no-resolve
 IP-CIDR6,2001:b28:f23f::/48,REJECT,no-resolve
-
-
-
 # PROXY
 
 // Client
@@ -6025,9 +6018,6 @@ IP-CIDR,149.154.172.0/22, PROXY,no-resolve
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,91.108.8.0/22,PROXY,no-resolve
-
-
-
 # DIRECT
 
 // Client
@@ -6363,6 +6353,7 @@ IP-CIDR,192.168.0.0/16,DIRECT
 
 
 
+
 // Detect local network
 GEOIP,CN,Domestic
 // Use Proxy for all others
@@ -6375,8 +6366,6 @@ FINAL,Others
 
 
 [Host]
-
-
 localhost = 127.0.0.1
 syria.sy = 127.0.0.1
 
@@ -6398,8 +6387,6 @@ www.gmail.com = 216.58.203.184
 
 
 [URL Rewrite]
-
-
 // Google_Service_HTTPS_Jump
 ^https?://(www.)?g.cn https://www.google.com 302
 ^https?://(www.)?google.cn https://www.google.com 302
@@ -7042,7 +7029,7 @@ www.gmail.com = 216.58.203.184
 
 
 [SSID Setting]
-
+# SSID
 
 
 
