--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Aug 16, 2018 at 20:29
+# Aug 18, 2018 at 05:20
 
 [Rule]
 # Custom
@@ -3657,7 +3657,6 @@ DOMAIN-SUFFIX,mo.haloapps.cn,REJECT
 DOMAIN-SUFFIX,mo.test.haloapps.com,REJECT
 DOMAIN-SUFFIX,moad.cn,REJECT
 DOMAIN-SUFFIX,moatads.com,REJECT
-DOMAIN-SUFFIX,mob.com,REJECT
 DOMAIN-SUFFIX,mobad.ijinshan.com,REJECT
 DOMAIN-SUFFIX,mobaders.com,REJECT
 DOMAIN-SUFFIX,mobadme.jp,REJECT
@@ -5284,6 +5283,9 @@ DOMAIN-SUFFIX,nflximg.net,Netflix & TVB & Spotify & YouTube
 DOMAIN-SUFFIX,nflxvideo.net,Netflix & TVB & Spotify & YouTube
 
 // Spark
+DOMAIN-SUFFIX,api.amplitude.com,PROXY
+DOMAIN-SUFFIX,app.smartmailcloud.com,PROXY
+DOMAIN-SUFFIX,gate.hockeyapp.net,PROXY
 DOMAIN-SUFFIX,smartmailcloud.com,PROXY
 
 // Steam
@@ -6072,11 +6074,6 @@ DOMAIN,client.amplifi.com,Domestic
 DOMAIN,ip.bjango.com,Domestic // iStat Menu IP Test
 DOMAIN-SUFFIX,alphassl.com,Domestic
 DOMAIN-SUFFIX,edu.cn,Domestic
-
-// Spark
-DOMAIN-SUFFIX,amplitude.com,Domestic
-DOMAIN-SUFFIX,firebaseio.com,Domestic
-DOMAIN-SUFFIX,gate.hockeyapp.net,Domestic
 
 // Steam
 DOMAIN-SUFFIX,steamcontent.com,Domestic
