--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Aug 18, 2018 at 05:20
+# Aug 18, 2018 at 15:51
 
 [Rule]
 # Custom
@@ -5884,6 +5884,7 @@ DOMAIN-KEYWORD,spotify,Netflix & TVB & Spotify & YouTube,force-remote-dns
 DOMAIN-KEYWORD,telegram,PROXY,force-remote-dns
 DOMAIN-KEYWORD,twitter,PROXY,force-remote-dns
 DOMAIN-KEYWORD,whatsapp,PROXY,force-remote-dns
+DOMAIN-KEYWORD,youtube,PROXY,force-remote-dns
 DOMAIN-SUFFIX,1e100.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,2mdn.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,abc.xyz,PROXY,force-remote-dns
@@ -5935,7 +5936,6 @@ DOMAIN-SUFFIX,unfiltered.news,PROXY,force-remote-dns
 DOMAIN-SUFFIX,waveprotocol.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,webmproject.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,webrtc.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,youtube.com,Netflix & TVB & Spotify & YouTube,force-remote-dns
 
 // Amazon
 IP-CIDR,13.32.0.0/16,PROXY,no-resolve
